feat: Improve contact informations with new types

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -386,6 +386,7 @@
   "Delete a new key": "حذف مفتاح جديد",
   "Delete API Token": "حذف رمز API",
   "Delete contact": "حذف اتصال",
+  "Delete contact information": "حذف معلومات الاتصال",
   "deleted a contact information": "حذف معلومات الاتصال",
   "deleted a goal": "حذفت هدفا",
   "deleted an address": "حذفت عنوانا",
@@ -480,6 +481,7 @@
   "Family": "عائلة",
   "Family summary": "ملخص العائلة",
   "Favorites": "المفضلة",
+  "Fax": "الفاكس",
   "Female": "أنثى",
   "File": "ملف",
   "Files": "ملفات",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "تتيح لك أنواع المجموعات تجميع الأشخاص معًا.",
   "Had a promotion": "كان ترقية",
   "Hamster": "الهامستر",
+  "Hangouts": "Hangouts",
   "Have a great day,": "أتمنى لك يوماً عظيماً،",
   "he/him": "هو / له",
   "Hello!": "أهلاً بك!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "تاريخ الإخطار المرسل",
   "Hobbies": "هوايات",
   "Home": "الرئيسية",
+  "Home House": "منزل المنزل",
   "Horse": "حصان",
   "How are you?": "كيف حالك؟",
   "How could I have done this day better?": "كيف كان بإمكاني أن أفعل هذا اليوم بشكل أفضل؟",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "المعلومات من ويكيبيديا",
   "in love with": "في حب",
   "Inspirational post": "وظيفة ملهمة",
+  "Instagram": "Instagram",
   "Insufficient Storage": "مساحة تخزين غير كافية",
   "Internal Server Error": "خطأ داخلي في الخادم",
   "Introduction": "مقدمة",
@@ -618,6 +623,7 @@
   "Just to say hello": "فقط أن أقول مرحبا",
   "Key name": "اسم المفتاح",
   "kilometers (km)": "كيلومتر (كم)",
+  "Kind": "عطوف",
   "km": "كم",
   "Label:": "ملصق:",
   "Labels": "تسميات",
@@ -706,6 +712,7 @@
   "miles": "اميال",
   "miles (mi)": "ميل (ميل)",
   "Misdirected Request": "طلب توجيه خاطئ",
+  "Mobile": "متحرك",
   "Modules in this page": "الوحدات في هذه الصفحة",
   "Monday": "الاثنين",
   "Monica. All rights reserved. 2017 — :date.": "Monica. كل الحقوق محفوظة. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "لا توجد تصنيفات حتى الآن.",
   "No life event types yet.": "لا توجد أنواع أحداث الحياة حتى الآن.",
   "Non-Authoritative Information": "معلومات غير موثوق بها",
+  "None": "لا أحد",
   "No notes found.": "لم يتم العثور على أي ملاحظات.",
   "No results found": "لم يتم العثور على نتائج",
   "No role": "لا دور",
@@ -798,6 +806,7 @@
   "Other": "آخر",
   "Out of respect and appreciation": "من باب الإحترام والتقدير",
   "Page Expired": "الصفحة منتهية الصلاحية",
+  "Pager": "بيجر",
   "Pages": "الصفحات",
   "Pagination Navigation": "التنقل بين الصفحات",
   "Parent": "الأبوين",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "شروط الاستخدام",
   "Test email for Monica": "اختبار البريد الإلكتروني لMonica",
   "Test email sent!": "تم إرسال البريد الإلكتروني التجريبي!",
+  "Text": "نص",
   "Thanks,": "شكرًا،",
   "Thanks for giving Monica a try.": "شكرا لإعطاء Monica المحاولة.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "شكرا لتسجيلك! قبل البدء، هل يمكنك التحقق من عنوان بريدك الإلكتروني عن طريق النقر على الرابط الذي أرسلناه إليك للتو عبر البريد الإلكتروني؟ إذا لم تتلق رسالة البريد الإلكتروني، فسنرسل لك بكل سرور رسالة أخرى.",
@@ -1274,6 +1284,7 @@
   "Translate It": "ترجمة",
   "Transportation": "مواصلات",
   "Tuesday": "يوم الثلاثاء",
+  "Twitter": "تغريد",
   "Two-factor Confirmation": "التأكيد الثنائي",
   "Two Factor Authentication": "المصادقة الثنائية",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "لقد تم تمكين المصادقة الثنائية لحسابك. قم بمسح رمز الاستجابة السريعة التالي باستخدام تطبيق المصادقة بهاتفك أو قم بإدخال مفتاح الإعداد.",
