--- a/lang/bn.json
+++ b/lang/bn.json
@@ -386,6 +386,7 @@
   "Delete a new key": "একটি নতুন কী মুছুন",
   "Delete API Token": "এপিআই টোকেন মুছুন",
   "Delete contact": "পরিচিতি মুছুন",
+  "Delete contact information": "যোগাযোগের তথ্য মুছুন",
   "deleted a contact information": "একটি যোগাযোগের তথ্য মুছে ফেলা হয়েছে",
   "deleted a goal": "একটি গোল মুছে ফেলেছে",
   "deleted an address": "একটি ঠিকানা মুছে ফেলা হয়েছে",
@@ -480,6 +481,7 @@
   "Family": "পরিবার",
   "Family summary": "পারিবারিক সারাংশ",
   "Favorites": "প্রিয়",
+  "Fax": "ফ্যাক্স",
   "Female": "মহিলা",
   "File": "ফাইল",
   "Files": "নথি পত্র",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "গোষ্ঠীর প্রকারগুলি আপনাকে লোকেদের একত্রিত করতে দেয়।",
   "Had a promotion": "পদোন্নতি ছিল",
   "Hamster": "হ্যামস্টার",
+  "Hangouts": "Hangouts",
   "Have a great day,": "দিন শুভ হোক,",
   "he/him": "সে/তাকে",
   "Hello!": "হ্যালো!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "প্রেরিত বিজ্ঞপ্তির ইতিহাস",
   "Hobbies": "শখ",
   "Home": "বাড়ি",
+  "Home House": "হোম হাউস",
   "Horse": "ঘোড়া",
   "How are you?": "আপনি কেমন আছেন?",
   "How could I have done this day better?": "আমি কিভাবে এই দিন ভাল করতে পারে?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "উইকিপিডিয়া থেকে তথ্য",
   "in love with": "প্রেমে",
   "Inspirational post": "অনুপ্রেরণামূলক পোস্ট",
+  "Instagram": "ইনস্টাগ্রাম",
   "Insufficient Storage": "অপর্যাপ্ত মজুত",
   "Internal Server Error": "অভ্যন্তরীণ সার্ভার ত্রুটি",
   "Introduction": "ভূমিকা",
@@ -618,6 +623,7 @@
   "Just to say hello": "শুধু হ্যালো বলতে",
   "Key name": "মূল নাম",
   "kilometers (km)": "কিলোমিটার (কিমি)",
+  "Kind": "দয়ালু",
   "km": "কিমি",
   "Label:": "লেবেল:",
   "Labels": "লেবেল",
@@ -706,6 +712,7 @@
   "miles": "মাইল",
   "miles (mi)": "মাইল (মাই)",
   "Misdirected Request": "ভুল নির্দেশিত অনুরোধ",
+  "Mobile": "মোবাইল",
   "Modules in this page": "এই পৃষ্ঠায় মডিউল",
   "Monday": "সোমবার",
   "Monica. All rights reserved. 2017 — :date.": "Monica। সমস্ত অধিকার সংরক্ষিত. 2017 — :date।",
@@ -751,6 +758,7 @@
   "No labels yet.": "এখনও কোন লেবেল নেই.",
   "No life event types yet.": "এখনও কোন জীবন ঘটনা প্রকার.",
   "Non-Authoritative Information": "অ-অনুমোদিত তথ্য",
+  "None": "কিছুই না",
   "No notes found.": "কোন নোট পাওয়া যায়নি.",
   "No results found": "কোন ফলাফল পাওয়া যায়নি",
   "No role": "কোন ভূমিকা নেই",
@@ -798,6 +806,7 @@
   "Other": "অন্যান্য",
   "Out of respect and appreciation": "সম্মান এবং প্রশংসার বাইরে",
   "Page Expired": "মেয়াদউত্তীর্ণ",
+  "Pager": "পেজার",
   "Pages": "পাতা",
   "Pagination Navigation": "পত্রাঙ্ক ন্যাভিগেশন",
   "Parent": "অভিভাবক",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "পরিষেবার শর্তাদি",
   "Test email for Monica": "Monica জন্য ইমেল পরীক্ষা করুন",
   "Test email sent!": "পরীক্ষার ইমেল পাঠানো হয়েছে!",
+  "Text": "পাঠ্য",
   "Thanks,": "ধন্যবাদ,",
   "Thanks for giving Monica a try.": "Monica চেষ্টা করার জন্য ধন্যবাদ.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "সাইন আপ করার জন্য ধন্যবাদ! শুরু করার আগে, আমরা এইমাত্র আপনাকে যে লিঙ্কটি ইমেল করেছি তাতে ক্লিক করে আপনি কি আপনার ইমেল ঠিকানা যাচাই করতে পারেন? আপনি যদি ইমেলটি না পেয়ে থাকেন, আমরা আনন্দের সাথে আপনাকে আরেকটি পাঠাব।",
@@ -1274,6 +1284,7 @@
   "Translate It": "ইহা অনুবাদ কর",
   "Transportation": "পরিবহন",
   "Tuesday": "মঙ্গলবার",
+  "Twitter": "টুইটার",
   "Two-factor Confirmation": "দ্বি-ফ্যাক্টর নিশ্চিতকরণ",
   "Two Factor Authentication": "দুই ফ্যাক্টর প্রমাণীকরণ",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "দুই ফ্যাক্টর প্রমাণীকরণ এখন সক্রিয় করা হয়েছে। আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন ব্যবহার করে নিম্নলিখিত QR কোডটি স্ক্যান করুন বা সেটআপ কী লিখুন৷",
