--- a/lang/ca.json
+++ b/lang/ca.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Suprimeix una clau nova",
   "Delete API Token": "Esborrar API Token",
   "Delete contact": "Suprimeix el contacte",
+  "Delete contact information": "Suprimeix la informació de contacte",
   "deleted a contact information": "ha suprimit una informació de contacte",
   "deleted a goal": "esborrat un gol",
   "deleted an address": "ha suprimit una adreça",
@@ -480,6 +481,7 @@
   "Family": "Família",
   "Family summary": "Resum familiar",
   "Favorites": "Preferits",
+  "Fax": "Fax",
   "Female": "Dona",
   "File": "Dossier",
   "Files": "Fitxers",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Els tipus de grup us permeten agrupar persones.",
   "Had a promotion": "Tenia una promoció",
   "Hamster": "Hàmster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Que tinguis un bon dia,",
   "he/him": "ell/ell",
   "Hello!": "Hola!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historial de la notificació enviada",
   "Hobbies": "Aficions",
   "Home": "Inici",
+  "Home House": "Casa",
   "Horse": "Cavall",
   "How are you?": "Com estàs?",
   "How could I have done this day better?": "Com podria haver fet millor aquest dia?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informació de la Viquipèdia",
   "in love with": "Enamorat de",
   "Inspirational post": "Post inspirador",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Emmagatzematge insuficient",
   "Internal Server Error": "error del servidor intern",
   "Introduction": "Introducció",
@@ -618,6 +623,7 @@
   "Just to say hello": "Només per saludar",
   "Key name": "Nom clau",
   "kilometers (km)": "quilòmetres (km)",
+  "Kind": "Classe",
   "km": "km",
   "Label:": "Etiqueta:",
   "Labels": "Etiquetes",
@@ -706,6 +712,7 @@
   "miles": "milles",
   "miles (mi)": "milles (mi)",
   "Misdirected Request": "Sol·licitud mal dirigida",
+  "Mobile": "Mòbil",
   "Modules in this page": "Mòduls d’aquesta pàgina",
   "Monday": "dilluns",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Tots els drets reservats. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Encara no hi ha etiquetes.",
   "No life event types yet.": "Encara no hi ha tipus d’esdeveniments vitals.",
   "Non-Authoritative Information": "Informació no autoritzada",
+  "None": "Res",
   "No notes found.": "No s’han trobat notes.",
   "No results found": "Sense resultats",
   "No role": "Cap paper",
@@ -798,6 +806,7 @@
   "Other": "Altres",
   "Out of respect and appreciation": "Per respecte i apreciació",
   "Page Expired": "Pàgina caducada",
+  "Pager": "Més aldicant",
   "Pages": "Pàgines",
   "Pagination Navigation": "Pagination Navegació",
   "Parent": "Pare",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Condicions del Servei",
   "Test email for Monica": "Correu electrònic de prova per a la Monica",
   "Test email sent!": "Correu electrònic de prova enviat!",
+  "Text": "Texte",
   "Thanks,": "Gràcies,",
   "Thanks for giving Monica a try.": "Gràcies per provar la Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Gràcies per registrar-te! Abans de començar, podríeu verificar la vostra adreça electrònica fent clic a l’enllaç que us acabem d’enviar per correu electrònic? Si no has rebut el correu electrònic, t’enviarem un altre amb molt de gust.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Tradueix-ho",
   "Transportation": "Transport",
   "Tuesday": "dimarts",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Confirmació de dos factors",
   "Two Factor Authentication": "Autenticació de doble factor",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "L’autenticació de dos factors està ara habilitada. Escanegi el següent codi QR utilitzant l’aplicació d’autentificació del seu telèfon o ingressi la clau de configuració.",
