--- a/lang/da.json
+++ b/lang/da.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Slet en ny nøgle",
   "Delete API Token": "Slet API-Token",
   "Delete contact": "Slet kontakt",
+  "Delete contact information": "Slet kontaktoplysninger",
   "deleted a contact information": "slettet en kontaktinformation",
   "deleted a goal": "slettet et mål",
   "deleted an address": "slettet en adresse",
@@ -480,6 +481,7 @@
   "Family": "Familie",
   "Family summary": "Familieoversigt",
   "Favorites": "Favoritter",
+  "Fax": "Fax",
   "Female": "Kvinde",
   "File": "Fil",
   "Files": "Filer",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Gruppetyper giver dig mulighed for at gruppere personer sammen.",
   "Had a promotion": "Havde en forfremmelse",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Hav en god dag,",
   "he/him": "han/ham",
   "Hello!": "Hej!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historien om den sendte meddelelse",
   "Hobbies": "Hobbyer",
   "Home": "Hjem",
+  "Home House": "Hjemmehus",
   "Horse": "Hest",
   "How are you?": "Hvordan har du det?",
   "How could I have done this day better?": "Hvordan kunne jeg have gjort denne dag bedre?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Oplysninger fra Wikipedia",
   "in love with": "Forelsket i",
   "Inspirational post": "Inspirerende indlæg",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Utilstrækkelig opbevaring",
   "Internal Server Error": "Intern serverfejl",
   "Introduction": "Introduktion",
@@ -618,6 +623,7 @@
   "Just to say hello": "Bare for at sige hej",
   "Key name": "Nøglenavn",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Slags",
   "km": "km",
   "Label:": "Etiket:",
   "Labels": "Etiketter",
@@ -706,6 +712,7 @@
   "miles": "miles",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Forkert anmodning",
+  "Mobile": "Mobil",
   "Modules in this page": "Moduler på denne side",
   "Monday": "Mandag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle rettigheder forbeholdes. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Ingen etiketter endnu.",
   "No life event types yet.": "Ingen livsbegivenhedstyper endnu.",
   "Non-Authoritative Information": "Ikke-autoritative oplysninger",
+  "None": "Ingen",
   "No notes found.": "Ingen noter fundet.",
   "No results found": "Ingen resultater fundet",
   "No role": "Ingen rolle",
@@ -798,6 +806,7 @@
   "Other": "Andet",
   "Out of respect and appreciation": "Af respekt og påskønnelse",
   "Page Expired": "Siden er udløbet",
+  "Pager": "Pager",
   "Pages": "sider",
   "Pagination Navigation": "Sidenavigation",
   "Parent": "Forælder",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Servicevilkår",
   "Test email for Monica": "Test e-mail for Monica",
   "Test email sent!": "Testmail sendt!",
+  "Text": "Tekst",
   "Thanks,": "Tak,",
   "Thanks for giving Monica a try.": "Tak fordi du gav Monica en chance.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Tak for din tilmelding! Før du går i gang, kunne du bekræfte din e-mailadresse ved at klikke på det link, vi lige har sendt til dig? Hvis du ikke har modtaget mailen, sender vi dig gerne en anden.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Oversæt Det",
   "Transportation": "Transport",
   "Tuesday": "tirsdag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "To-faktor bekræftelse",
   "Two Factor Authentication": "To-faktor-godkendelse",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "To-faktor-godkendelse er nu aktiveret. Scan følgende QR-kode ved hjælp af din telefons autentificeringsprogram, eller indtast opsætningsnøglen.",
