--- a/lang/de.json
+++ b/lang/de.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Löschen Sie einen neuen Schlüssel",
   "Delete API Token": "API-Token löschen",
   "Delete contact": "Kontakt löschen",
+  "Delete contact information": "Kontaktinformationen löschen",
   "deleted a contact information": "eine Kontaktinformation gelöscht",
   "deleted a goal": "ein Ziel gelöscht",
   "deleted an address": "eine Adresse gelöscht",
@@ -480,6 +481,7 @@
   "Family": "Familie",
   "Family summary": "Familienzusammenfassung",
   "Favorites": "Favoriten",
+  "Fax": "Fax",
   "Female": "Weiblich",
   "File": "Datei",
   "Files": "Dateien",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Mit Gruppentypen können Sie Personen gruppieren.",
   "Had a promotion": "Hatte eine Beförderung",
   "Hamster": "Hamster",
+  "Hangouts": "Treffpunkte",
   "Have a great day,": "Ich wünsche ihnen einen wunderbaren Tag,",
   "he/him": "er/ihm",
   "Hello!": "Hallo!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Verlauf der gesendeten Benachrichtigung",
   "Hobbies": "Hobbys",
   "Home": "Startseite",
+  "Home House": "Haushaus",
   "Horse": "Pferd",
   "How are you?": "Wie geht es dir?",
   "How could I have done this day better?": "Wie hätte ich diesen Tag besser machen können?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informationen aus Wikipedia",
   "in love with": "verliebt in",
   "Inspirational post": "Inspirierender Beitrag",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Nicht genügend Speicherplatz",
   "Internal Server Error": "Interner Serverfehler",
   "Introduction": "Einführung",
@@ -618,6 +623,7 @@
   "Just to say hello": "Nur um hallo zu sagen",
   "Key name": "Schlüsselname",
   "kilometers (km)": "Kilometer (km)",
+  "Kind": "Art",
   "km": "km",
   "Label:": "Etikett:",
   "Labels": "Etiketten",
@@ -706,6 +712,7 @@
   "miles": "Meilen",
   "miles (mi)": "Meilen (mi)",
   "Misdirected Request": "Fehlgeleitete Anfrage",
+  "Mobile": "Mobile",
   "Modules in this page": "Module auf dieser Seite",
   "Monday": "Montag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle Rechte vorbehalten. 2017 – :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Noch keine Etiketten.",
   "No life event types yet.": "Noch keine Lebensereignistypen.",
   "Non-Authoritative Information": "Nicht maßgebende Informationen",
+  "None": "Keiner",
   "No notes found.": "Keine Notizen gefunden.",
   "No results found": "keine Ergebnisse gefunden",
   "No role": "Keine Rolle",
@@ -798,6 +806,7 @@
   "Other": "Andere",
   "Out of respect and appreciation": "Aus Respekt und Wertschätzung",
   "Page Expired": "Seite abgelaufen",
+  "Pager": "Pager",
   "Pages": "Seiten",
   "Pagination Navigation": "Seiten-Navigation",
   "Parent": "Elternteil",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Nutzungsbedingungen",
   "Test email for Monica": "Test-E-Mail für Monica",
   "Test email sent!": "Test-E-Mail gesendet!",
+  "Text": "Text",
   "Thanks,": "Danke,",
   "Thanks for giving Monica a try.": "Danke, dass du Monica einen Versuch gegeben hast.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Danke für’s Registrieren! Bevor Sie beginnen, können Sie Ihre E-Mail-Adresse bestätigen, indem Sie auf den Link klicken, den wir Ihnen gerade per E-Mail zugesandt haben. Wenn Sie die E-Mail nicht erhalten haben, senden wir Ihnen gerne eine weitere zu.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Übersetze es",
   "Transportation": "Transport",
   "Tuesday": "Dienstag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Zwei-Faktor-Bestätigung",
   "Two Factor Authentication": "Zwei-Faktor-Authentifizierung",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Die Zwei-Faktor-Authentifizierung ist jetzt aktiviert. Scannen Sie den folgenden QR-Code mit der Authentifizierungsanwendung Ihres Smartphones oder geben Sie den Einrichtungsschlüssel ein.",
