--- a/lang/el.json
+++ b/lang/el.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Διαγραφή νέου κλειδιού",
   "Delete API Token": "Διαγραφή Token API",
   "Delete contact": "Διαγραφή επαφής",
+  "Delete contact information": "Διαγραφή πληροφοριών επικοινωνίας",
   "deleted a contact information": "διέγραψε στοιχεία επικοινωνίας",
   "deleted a goal": "διέγραψε ένα στόχο",
   "deleted an address": "διέγραψε μια διεύθυνση",
@@ -480,6 +481,7 @@
   "Family": "Οικογένεια",
   "Family summary": "Περίληψη της οικογένειας",
   "Favorites": "Αγαπημένα",
+  "Fax": "Φαξ",
   "Female": "Θηλυκός",
   "File": "Αρχείο",
   "Files": "Αρχεία",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Οι τύποι ομάδας σάς επιτρέπουν να ομαδοποιείτε άτομα.",
   "Had a promotion": "Είχε προαγωγή",
   "Hamster": "Χάμστερ",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Να έχεις μια υπέροχη μέρα,",
   "he/him": "αυτός/αυτόν",
   "Hello!": "Χαίρετε!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Ιστορικό της ειδοποίησης που στάλθηκε",
   "Hobbies": "Χόμπι",
   "Home": "Αρχική",
+  "Home House": "Σπίτι",
   "Horse": "Αλογο",
   "How are you?": "Πώς είσαι;",
   "How could I have done this day better?": "Πώς θα μπορούσα να είχα κάνει καλύτερα αυτή τη μέρα;",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Πληροφορίες από τη Wikipedia",
   "in love with": "ερωτευμένος με",
   "Inspirational post": "Εμπνευσμένη ανάρτηση",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Ανεπαρκής αποθηκευτικός χώρος",
   "Internal Server Error": "Εσωτερικό Σφάλμα Διακομιστή",
   "Introduction": "Εισαγωγή",
@@ -618,6 +623,7 @@
   "Just to say hello": "Απλά για να πω ένα γεια",
   "Key name": "Όνομα κλειδιού",
   "kilometers (km)": "χιλιόμετρα (χλμ)",
+  "Kind": "Είδος",
   "km": "χλμ",
   "Label:": "Επιγραφή:",
   "Labels": "Ετικέτες",
@@ -706,6 +712,7 @@
   "miles": "μίλια",
   "miles (mi)": "μίλια (mi)",
   "Misdirected Request": "Εσφαλμένη διεύθυνση αιτήματος",
+  "Mobile": "Κινητός",
   "Modules in this page": "Ενότητες σε αυτή τη σελίδα",
   "Monday": "Δευτέρα",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Ολα τα δικαιώματα διατηρούνται. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Δεν υπάρχουν ακόμη ετικέτες.",
   "No life event types yet.": "Δεν υπάρχουν ακόμη τύποι συμβάντων ζωής.",
   "Non-Authoritative Information": "Μη Εξουσιοδοτημένες Πληροφορίες",
+  "None": "Κανένας",
   "No notes found.": "Δεν βρέθηκαν σημειώσεις.",
   "No results found": "Δεν βρέθηκαν αποτελέσματα",
   "No role": "Κανένας ρόλος",
@@ -798,6 +806,7 @@
   "Other": "Αλλα",
   "Out of respect and appreciation": "Από σεβασμό και εκτίμηση",
   "Page Expired": "Η συνεδρία έληξε",
+  "Pager": "Τηλεειδοποιητής",
   "Pages": "Σελίδες",
   "Pagination Navigation": "Πλοήγηση Σελιδοποίησης",
   "Parent": "Μητρική εταιρεία",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Όροι Παροχής Υπηρεσιών",
   "Test email for Monica": "Δοκιμαστικό email για τη Monica",
   "Test email sent!": "Εστάλη δοκιμαστικό email!",
+  "Text": "Κείμενο",
   "Thanks,": "Ευχαριστώ,",
   "Thanks for giving Monica a try.": "Ευχαριστούμε που δοκιμάσατε τη Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Ευχαριστούμε για την εγγραφή! Πριν ξεκινήσετε, θα μπορούσατε να επαληθεύσετε τη διεύθυνση email σας κάνοντας κλικ στον σύνδεσμο που μόλις σας στείλαμε email; Εάν δεν λάβατε το email, θα σας στείλουμε ευχαρίστως άλλο.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Μετάφρασέ το",
   "Transportation": "Μεταφορά",
   "Tuesday": "Τρίτη",
+  "Twitter": "Κελάδημα",
   "Two-factor Confirmation": "Επιβεβαίωση δύο παραγόντων",
   "Two Factor Authentication": "Έλεγχος Ταυτότητας Δύο Παραγόντων",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Ο έλεγχος ταυτότητας δύο παραγόντων είναι πλέον ενεργοποιημένος. Σαρώστε τον ακόλουθο κωδικό QR χρησιμοποιώντας την εφαρμογή ελέγχου ταυτότητας του τηλεφώνου σας ή εισαγάγετε το κλειδί ρύθμισης.",
