--- a/lang/en.json
+++ b/lang/en.json
@@ -542,6 +542,7 @@
   "History of the notification sent": "History of the notification sent",
   "Hobbies": "Hobbies",
   "Home": "Home",
+  "Home House": "Home",
   "Horse": "Horse",
   "How are you?": "How are you?",
   "How could I have done this day better?": "How could I have done this day better?",
