--- a/lang/es.json
+++ b/lang/es.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Eliminar una nueva clave",
   "Delete API Token": "Borrar token API",
   "Delete contact": "Borrar contacto",
+  "Delete contact information": "Eliminar información de contacto",
   "deleted a contact information": "eliminó una información de contacto",
   "deleted a goal": "eliminado un gol",
   "deleted an address": "eliminó una dirección",
@@ -480,6 +481,7 @@
   "Family": "Familia",
   "Family summary": "Resumen familiar",
   "Favorites": "Favoritos",
+  "Fax": "Fax",
   "Female": "Femenino",
   "File": "Archivo",
   "Files": "Archivos",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Los tipos de grupo le permiten agrupar personas.",
   "Had a promotion": "tuvo una promoción",
   "Hamster": "Hámster",
+  "Hangouts": "Lugar de reunión",
   "Have a great day,": "Qué tengas un lindo día,",
   "he/him": "él/él",
   "Hello!": "¡Hola!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historial de la notificación enviada",
   "Hobbies": "Aficiones",
   "Home": "Inicio",
+  "Home House": "Casa de casa",
   "Horse": "Caballo",
   "How are you?": "¿Cómo estás?",
   "How could I have done this day better?": "¿Cómo podría haber hecho este día mejor?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Información de Wikipedia",
   "in love with": "enamorado de",
   "Inspirational post": "Publicación inspiradora",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Espacio insuficiente",
   "Internal Server Error": "Error interno del servidor",
   "Introduction": "Introducción",
@@ -618,6 +623,7 @@
   "Just to say hello": "Sólo para decir hola",
   "Key name": "Nombre clave",
   "kilometers (km)": "kilómetros (km)",
+  "Kind": "Amable",
   "km": "kilómetros",
   "Label:": "Etiqueta:",
   "Labels": "Etiquetas",
@@ -706,6 +712,7 @@
   "miles": "millas",
   "miles (mi)": "millas (mi)",
   "Misdirected Request": "Solicitud mal dirigida",
+  "Mobile": "Móvil",
   "Modules in this page": "Módulos en esta página",
   "Monday": "Lunes",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Reservados todos los derechos. 2017: :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Aún no hay etiquetas.",
   "No life event types yet.": "Aún no hay tipos de eventos de vida.",
   "Non-Authoritative Information": "Información no autorizada",
+  "None": "Ninguno",
   "No notes found.": "No se encontraron notas.",
   "No results found": "No se han encontrado resultados",
   "No role": "Sin rol",
@@ -798,6 +806,7 @@
   "Other": "Otro",
   "Out of respect and appreciation": "Por respeto y aprecio",
   "Page Expired": "Página expirada",
+  "Pager": "Buscapersonas",
   "Pages": "paginas",
   "Pagination Navigation": "Navegación por los enlaces de paginación",
   "Parent": "Padre",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Términos del servicio",
   "Test email for Monica": "Correo electrónico de prueba para Monica",
   "Test email sent!": "¡Correo electrónico de prueba enviado!",
+  "Text": "Texto",
   "Thanks,": "Gracias,",
   "Thanks for giving Monica a try.": "Gracias por darle una oportunidad a Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Gracias por registrarte! Antes de comenzar, ¿podría verificar su dirección de correo electrónico haciendo clic en el enlace que le acabamos de enviar por correo electrónico? Si no recibió el correo electrónico, con gusto le enviaremos otro.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Traducirlo",
   "Transportation": "Transporte",
   "Tuesday": "Martes",
+  "Twitter": "Gorjeo",
   "Two-factor Confirmation": "Confirmación de dos factores",
   "Two Factor Authentication": "Autenticación de dos factores",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "La autenticación de dos factores ahora está habilitada. Escanee el siguiente código QR usando la aplicación de autenticación de su teléfono o ingrese la clave de configuración.",
