--- a/lang/fr.json
+++ b/lang/fr.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Supprimer une nouvelle clé",
   "Delete API Token": "Supprimer le jeton API",
   "Delete contact": "Effacer le contact",
+  "Delete contact information": "Supprimer les coordonnées",
   "deleted a contact information": "a supprimé une information de contact",
   "deleted a goal": "a supprimé un objectif",
   "deleted an address": "a supprimé une adresse",
@@ -480,6 +481,7 @@
   "Family": "Famille",
   "Family summary": "Résumé de la famille",
   "Favorites": "Favoris",
+  "Fax": "Fax",
   "Female": "Femme",
   "File": "Déposer",
   "Files": "Des dossiers",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Les types de groupe vous permettent de regrouper des personnes.",
   "Had a promotion": "A eu une promotion",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Passe une bonne journée,",
   "he/him": "il/lui",
   "Hello!": "Bonjour !",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historique de la notification envoyée",
   "Hobbies": "Loisirs",
   "Home": "Accueil",
+  "Home House": "Domicile",
   "Horse": "Cheval",
   "How are you?": "Comment allez-vous ?",
   "How could I have done this day better?": "Comment aurais-je pu mieux faire cette journée ?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informations de Wikipédia",
   "in love with": "amoureux de",
   "Inspirational post": "Article inspirant",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Espace insuffisant",
   "Internal Server Error": "Erreur interne du serveur",
   "Introduction": "Introduction",
@@ -618,6 +623,7 @@
   "Just to say hello": "Juste pour dire bonjour",
   "Key name": "Nom de la clé",
   "kilometers (km)": "kilomètres (km)",
+  "Kind": "Type",
   "km": "km",
   "Label:": "Étiquette :",
   "Labels": "Étiquettes",
@@ -706,6 +712,7 @@
   "miles": "miles",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Demande mal dirigée",
+  "Mobile": "Mobile",
   "Modules in this page": "Modules dans cette page",
   "Monday": "Lundi",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Tous droits réservés. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Pas encore d’étiquettes.",
   "No life event types yet.": "Aucun type d’évènement de la vie pour l’instant.",
   "Non-Authoritative Information": "Informations non certifiées",
+  "None": "Aucun",
   "No notes found.": "Aucune note trouvée.",
   "No results found": "Aucun résultat trouvé",
   "No role": "Aucun rôle",
@@ -798,6 +806,7 @@
   "Other": "Autre",
   "Out of respect and appreciation": "Par respect et appréciation",
   "Page Expired": "Page expirée",
+  "Pager": "Pager",
   "Pages": "Pages",
   "Pagination Navigation": "Pagination",
   "Parent": "Parent",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Conditions d’utilisation",
   "Test email for Monica": "E-mail de test pour Monica",
   "Test email sent!": "Email test envoyé !",
+  "Text": "Texte",
   "Thanks,": "Merci,",
   "Thanks for giving Monica a try.": "Merci d’avoir essayé Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Merci pour l’enregistrement! Avant de commencer, pourriez-vous vérifier votre adresse e-mail en cliquant sur le lien que nous venons de vous envoyer par e-mail ? Si vous n’avez pas reçu l’e-mail, nous vous en enverrons volontiers un autre.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Traduis le",
   "Transportation": "Transport",
   "Tuesday": "Mardi",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Confirmation à deux facteurs",
   "Two Factor Authentication": "Authentification à deux facteurs",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "L’authentification à deux facteurs est maintenant activée. Scannez le code QR suivant à l’aide de l’application d’authentification de votre téléphone ou entrez la clé de configuration.",
