--- a/lang/he.json
+++ b/lang/he.json
@@ -386,6 +386,7 @@
   "Delete a new key": "מחק מפתח חדש",
   "Delete API Token": "מחק אסימון API",
   "Delete contact": "תמחק קשר",
+  "Delete contact information": "מחק את פרטי הקשר",
   "deleted a contact information": "מחק פרטי איש קשר",
   "deleted a goal": "מחק יעד",
   "deleted an address": "מחק כתובת",
@@ -480,6 +481,7 @@
   "Family": "מִשׁפָּחָה",
   "Family summary": "סיכום משפחתי",
   "Favorites": "מועדפים",
+  "Fax": "פַקס",
   "Female": "נְקֵבָה",
   "File": "קוֹבֶץ",
   "Files": "קבצים",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "סוגי קבוצות מאפשרים לך לקבץ אנשים יחד.",
   "Had a promotion": "היה קידום",
   "Hamster": "אוֹגֵר",
+  "Hangouts": "Hangouts",
   "Have a great day,": "שיהיה לך יום טוב,",
   "he/him": "הוא/הוא",
   "Hello!": "שלום!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "היסטוריה של ההודעה שנשלחה",
   "Hobbies": "תחביבים",
   "Home": "בית",
+  "Home House": "בית בית",
   "Horse": "סוּס",
   "How are you?": "מה שלומך?",
   "How could I have done this day better?": "איך יכולתי לעשות את היום הזה טוב יותר?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "מידע מויקיפדיה",
   "in love with": "מאוהב ב",
   "Inspirational post": "פוסט מעורר השראה",
+  "Instagram": "אינסטגרם",
   "Insufficient Storage": "אין מספיק שטח אחסון",
   "Internal Server Error": "שגיאת שרת פנימית",
   "Introduction": "מבוא",
@@ -618,6 +623,7 @@
   "Just to say hello": "רק להגיד שלום",
   "Key name": "שם מפתח",
   "kilometers (km)": "קילומטרים (ק\"מ)",
+  "Kind": "סוּג",
   "km": "ק\"מ",
   "Label:": "תווית:",
   "Labels": "תוויות",
@@ -706,6 +712,7 @@
   "miles": "מיילס",
   "miles (mi)": "מיילים (מייל)",
   "Misdirected Request": "בקשה שגויה",
+  "Mobile": "נייד",
   "Modules in this page": "מודולים בעמוד זה",
   "Monday": "יוֹם שֵׁנִי",
   "Monica. All rights reserved. 2017 — :date.": "Monica. כל הזכויות שמורות. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "עדיין אין תוויות.",
   "No life event types yet.": "עדיין אין סוגי אירועי חיים.",
   "Non-Authoritative Information": "מידע לא סמכותי",
+  "None": "אַף לֹא אֶחָד",
   "No notes found.": "לא נמצאו הערות.",
   "No results found": "לא נמצאו תוצאות",
   "No role": "אין תפקיד",
@@ -798,6 +806,7 @@
   "Other": "אַחֵר",
   "Out of respect and appreciation": "מתוך כבוד והערכה",
   "Page Expired": "תוקף הדף פג",
+  "Pager": "ביפר",
   "Pages": "דפים",
   "Pagination Navigation": "ניווט בדפים",
   "Parent": "הוֹרֶה",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "תנאי שימוש",
   "Test email for Monica": "דוא\"ל בדיקה עבור Monica",
   "Test email sent!": "מייל בדיקה נשלח!",
+  "Text": "טֶקסט",
   "Thanks,": "תודה,",
   "Thanks for giving Monica a try.": "תודה שניסית את Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "תודה על ההרשמה! לפני שתתחיל, האם תוכל לאמת את כתובת הדוא\"ל שלך על ידי לחיצה על הקישור שזה עתה שלחנו לך בדוא\"ל? אם לא קיבלת את המייל, נשלח לך בשמחה דוא\"ל נוסף.",
@@ -1274,6 +1284,7 @@
   "Translate It": "תרגם את זה",
   "Transportation": "הוֹבָלָה",
   "Tuesday": "יוֹם שְׁלִישִׁי",
+  "Twitter": "לְצַפְצֵף",
   "Two-factor Confirmation": "אישור דו-גורמי",
   "Two Factor Authentication": "אימות שני גורמים",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "אימות שני גורמים מופעל כעת. סרוק את קוד ה-QR הבא באמצעות אפליקציית המאמת של הטלפון שלך או הזן את מפתח ההגדרה.",
