--- a/lang/hi.json
+++ b/lang/hi.json
@@ -386,6 +386,7 @@
   "Delete a new key": "एक नई कुंजी हटाएँ",
   "Delete API Token": "एपीआई टोकन हटाएं",
   "Delete contact": "संपर्क मिटा दें",
+  "Delete contact information": "संपर्क जानकारी हटाएं",
   "deleted a contact information": "एक संपर्क जानकारी हटा दी गई",
   "deleted a goal": "एक लक्ष्य हटा दिया गया",
   "deleted an address": "एक पता हटा दिया गया",
@@ -480,6 +481,7 @@
   "Family": "परिवार",
   "Family summary": "पारिवारिक सारांश",
   "Favorites": "पसंदीदा",
+  "Fax": "फैक्स",
   "Female": "महिला",
   "File": "फ़ाइल",
   "Files": "फ़ाइलें",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "समूह प्रकार से आप लोगों को एक साथ समूहित कर सकते हैं।",
   "Had a promotion": "प्रमोशन हुआ",
   "Hamster": "हम्सटर",
+  "Hangouts": "Hangouts",
   "Have a great day,": "आपका दिन अच्छा रहे,",
   "he/him": "वह/उसे",
   "Hello!": "नमस्कार!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "भेजी गई अधिसूचना का इतिहास",
   "Hobbies": "शौक",
   "Home": "घर",
+  "Home House": "घर घर",
   "Horse": "घोड़ा",
   "How are you?": "आप कैसे हैं?",
   "How could I have done this day better?": "मैं इस दिन को इससे बेहतर कैसे कर सकता था?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "विकिपीडिया से जानकारी",
   "in love with": "के साथ प्यार में",
   "Inspirational post": "प्रेरणादायक पोस्ट",
+  "Instagram": "Instagram",
   "Insufficient Storage": "अपर्याप्त संग्रहण",
   "Internal Server Error": "आंतरिक सर्वर त्रुटि",
   "Introduction": "परिचय",
@@ -618,6 +623,7 @@
   "Just to say hello": "केवल हैलो करने के लिए",
   "Key name": "कुंजी का नाम",
   "kilometers (km)": "किलोमीटर (किमी)",
+  "Kind": "दयालु",
   "km": "किमी",
   "Label:": "लेबल:",
   "Labels": "लेबल",
@@ -643,7 +649,7 @@
   "Life metrics": "जीवन मेट्रिक्स",
   "Life metrics let you track metrics that are important to you.": "जीवन मेट्रिक्स आपको उन मेट्रिक्स को ट्रैक करने देता है जो आपके लिए महत्वपूर्ण हैं।",
   "Like": "पसंद",
-  "LinkedIn": "Linkedin",
+  "LinkedIn": "LinkedIn",
   "List of addresses": "पतों की सूची",
   "List of addresses of the contacts in the vault": "वॉल्ट में संपर्कों के पतों की सूची",
   "List of all important dates": "सभी महत्वपूर्ण तिथियों की सूची",
@@ -706,6 +712,7 @@
   "miles": "मील",
   "miles (mi)": "मील (मील)",
   "Misdirected Request": "दिशाहीन अनुरोध",
+  "Mobile": "गतिमान",
   "Modules in this page": "इस पृष्ठ में मॉड्यूल",
   "Monday": "सोमवार",
   "Monica. All rights reserved. 2017 — :date.": "Monica. सर्वाधिकार सुरक्षित। 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "अभी तक कोई लेबल नहीं.",
   "No life event types yet.": "अभी तक कोई जीवन घटना प्रकार नहीं.",
   "Non-Authoritative Information": "गैर-आधिकारिक सूचना",
+  "None": "कोई नहीं",
   "No notes found.": "कोई नोट नहीं मिला.",
   "No results found": "कोई परिणाम नहीं मिला",
   "No role": "कोई भूमिका नहीं",
@@ -798,6 +806,7 @@
   "Other": "अन्य",
   "Out of respect and appreciation": "सम्मान और प्रशंसा से बाहर",
   "Page Expired": "पृष्ठ समाप्त हो गया",
+  "Pager": "पेजर",
   "Pages": "पृष्ठों",
   "Pagination Navigation": "पृष्ठ पर अंक लगाना नेविगेशन",
   "Parent": "माता-पिता",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "सेवा की शर्तें",
   "Test email for Monica": "Monica के लिए परीक्षण ईमेल",
   "Test email sent!": "परीक्षण ईमेल भेजा गया!",
+  "Text": "मूलपाठ",
   "Thanks,": "धन्यवाद,",
   "Thanks for giving Monica a try.": "Monica को आज़माने के लिए धन्यवाद.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "साइन अप करने के लिए धन्यवाद! आरंभ करने से पहले, क्या आप उस लिंक पर क्लिक करके अपना ईमेल पता सत्यापित कर सकते हैं जो हमने अभी आपको ईमेल किया है? यदि आपको ईमेल प्राप्त नहीं हुआ, तो हम ख़ुशी से आपको दूसरा ईमेल भेजेंगे।",
@@ -1274,6 +1284,7 @@
   "Translate It": "इसका अनुवाद करें",
   "Transportation": "परिवहन",
   "Tuesday": "मंगलवार",
+  "Twitter": "ट्विटर",
   "Two-factor Confirmation": "दो-कारक पुष्टि",
   "Two Factor Authentication": "दो कारक प्रमाणीकरण",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "दो कारक प्रमाणीकरण अब सक्षम है। अपने फोन के ऑथेंटिकेटर एप्लिकेशन का उपयोग करके निम्नलिखित क्यूआर कोड को स्कैन करें या सेटअप कुंजी दर्ज करें।",
