--- a/lang/it.json
+++ b/lang/it.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Elimina una nuova chiave",
   "Delete API Token": "Elimina Token API",
   "Delete contact": "Elimina contatto",
+  "Delete contact information": "Elimina le informazioni di contatto",
   "deleted a contact information": "cancellato un’informazione di contatto",
   "deleted a goal": "cancellato un obiettivo",
   "deleted an address": "cancellato un indirizzo",
@@ -480,6 +481,7 @@
   "Family": "Famiglia",
   "Family summary": "Riepilogo della famiglia",
   "Favorites": "Preferiti",
+  "Fax": "Fax",
   "Female": "Femmina",
   "File": "File",
   "Files": "File",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "I tipi di gruppo ti consentono di raggruppare le persone.",
   "Had a promotion": "Ha avuto una promozione",
   "Hamster": "Criceto",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Vi auguro una buona giornata,",
   "he/him": "lui/lui",
   "Hello!": "Ciao!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Storico della notifica inviata",
   "Hobbies": "Hobby",
   "Home": "Home",
+  "Home House": "Casa di casa",
   "Horse": "Cavallo",
   "How are you?": "Come stai?",
   "How could I have done this day better?": "Come avrei potuto vivere meglio questa giornata?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informazioni da Wikipedia",
   "in love with": "innamorato di",
   "Inspirational post": "Post ispiratore",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Spazio insufficiente",
   "Internal Server Error": "Errore interno al server",
   "Introduction": "introduzione",
@@ -618,6 +623,7 @@
   "Just to say hello": "Solo per salutarti",
   "Key name": "Nome chiave",
   "kilometers (km)": "chilometri (km)",
+  "Kind": "Tipo",
   "km": "km",
   "Label:": "Etichetta:",
   "Labels": "Etichette",
@@ -706,6 +712,7 @@
   "miles": "miglia",
   "miles (mi)": "miglia (mi)",
   "Misdirected Request": "Richiesta mal indirizzata",
+  "Mobile": "Mobile",
   "Modules in this page": "Moduli in questa pagina",
   "Monday": "Lunedi",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Tutti i diritti riservati. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Nessuna etichetta ancora.",
   "No life event types yet.": "Nessun tipo di evento della vita ancora.",
   "Non-Authoritative Information": "Informazione non autorevole",
+  "None": "Nessuno",
   "No notes found.": "Nessuna nota trovata.",
   "No results found": "nessun risultato trovato",
   "No role": "Nessun ruolo",
@@ -798,6 +806,7 @@
   "Other": "Altro",
   "Out of respect and appreciation": "Per rispetto e apprezzamento",
   "Page Expired": "Pagina scaduta",
+  "Pager": "Cercapersone",
   "Pages": "Pagine",
   "Pagination Navigation": "Navigazione della Paginazione",
   "Parent": "Genitore",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Termini d’uso del servizio",
   "Test email for Monica": "Prova l’e-mail per Monica",
   "Test email sent!": "Email di prova inviata!",
+  "Text": "Testo",
   "Thanks,": "Grazie,",
   "Thanks for giving Monica a try.": "Grazie per aver dato una possibilità a Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Grazie per esserti iscritto! Prima di iniziare, potresti verificare il tuo indirizzo email facendo clic sul collegamento che ti abbiamo appena inviato via email? Se non hai ricevuto l’e-mail, te ne invieremo volentieri un’altra.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Traducilo",
   "Transportation": "Trasporti",
   "Tuesday": "Martedì",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Conferma a due fattori",
   "Two Factor Authentication": "Autenticazione a due fattori",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "L’autenticazione a due fattori è stata attivata. Scansiona il QR code seguente usando l’app di autenticazione sul tuo cellulare oppure scrivi il codice di configurazione.",
