--- a/lang/ja.json
+++ b/lang/ja.json
@@ -386,6 +386,7 @@
   "Delete a new key": "新しいキーを削除する",
   "Delete API Token": "APIトークン削除",
   "Delete contact": "連絡先を削除する",
+  "Delete contact information": "連絡先情報を削除します",
   "deleted a contact information": "連絡先情報を削除しました",
   "deleted a goal": "ゴールを削除した",
   "deleted an address": "アドレスを削除しました",
@@ -480,6 +481,7 @@
   "Family": "家族",
   "Family summary": "家族の概要",
   "Favorites": "お気に入り",
+  "Fax": "ファックス",
   "Female": "女性",
   "File": "ファイル",
   "Files": "ファイル",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "グループ タイプを使用すると、人々をグループ化できます。",
   "Had a promotion": "昇進がありました",
   "Hamster": "ハムスター",
+  "Hangouts": "ハングアウト",
   "Have a great day,": "すてきな一日を、",
   "he/him": "彼/彼",
   "Hello!": "こんにちは",
@@ -548,6 +551,7 @@
   "History of the notification sent": "送信された通知の履歴",
   "Hobbies": "趣味",
   "Home": "ホーム",
+  "Home House": "ホームハウス",
   "Horse": "馬",
   "How are you?": "元気ですか？",
   "How could I have done this day better?": "この日をどうすればもっと良くできたでしょうか？",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "ウィキペディアからの情報",
   "in love with": "恋してる",
   "Inspirational post": "インスピレーションを与える投稿",
+  "Instagram": "Instagram",
   "Insufficient Storage": "ストレージ不足",
   "Internal Server Error": "内部サーバーエラー",
   "Introduction": "導入",
@@ -618,6 +623,7 @@
   "Just to say hello": "ただ挨拶するために",
   "Key name": "キー名",
   "kilometers (km)": "キロメートル (km)",
+  "Kind": "親切",
   "km": "km",
   "Label:": "ラベル：",
   "Labels": "ラベル",
@@ -706,6 +712,7 @@
   "miles": "マイル",
   "miles (mi)": "マイル (mi)",
   "Misdirected Request": "誤ったリクエスト",
+  "Mobile": "携帯",
   "Modules in this page": "このページのモジュール",
   "Monday": "月曜日",
   "Monica. All rights reserved. 2017 — :date.": "Monica。無断転載を禁じます。 2017 — :date。",
@@ -751,6 +758,7 @@
   "No labels yet.": "まだラベルがありません。",
   "No life event types yet.": "ライフ イベント タイプはまだありません。",
   "Non-Authoritative Information": "信頼できない情報",
+  "None": "なし",
   "No notes found.": "メモが見つかりませんでした。",
   "No results found": "結果が見つかりません",
   "No role": "役割なし",
@@ -798,6 +806,7 @@
   "Other": "他の",
   "Out of respect and appreciation": "敬意と感謝の気持ちから",
   "Page Expired": "ページが無効です",
+  "Pager": "ページャ",
   "Pages": "ページ",
   "Pagination Navigation": "ページネーション",
   "Parent": "親",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "利用規約",
   "Test email for Monica": "Monicaのテストメール",
   "Test email sent!": "テストメールを送信しました!",
+  "Text": "文章",
   "Thanks,": "ありがとう、",
   "Thanks for giving Monica a try.": "Monicaを試してくれてありがとう。",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "ご登録いただきありがとうございます!始める前に、先ほどメールでお送りしたリンクをクリックして、メール アドレスを確認していただけますか?メールが届かない場合は、喜んで別のメールをお送りいたします。",
@@ -1274,6 +1284,7 @@
   "Translate It": "翻訳してください",
   "Transportation": "交通機関",
   "Tuesday": "火曜日",
+  "Twitter": "ツイッター",
   "Two-factor Confirmation": "二要素確認",
   "Two Factor Authentication": "二要素認証",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "二要素認証が有効になりました。 お使いの携帯電話の認証アプリを使用して、QRコードをスキャンするか、セットアップキーを入力します。",
