--- a/lang/ml.json
+++ b/lang/ml.json
@@ -386,6 +386,7 @@
   "Delete a new key": "ഒരു പുതിയ കീ ഇല്ലാതാക്കുക",
   "Delete API Token": "API ടോക്കൺ ഇല്ലാതാക്കുക",
   "Delete contact": "കോൺടാക്റ്റ് ഇല്ലാതാക്കുക",
+  "Delete contact information": "കോൺടാക്റ്റ് വിവരങ്ങൾ ഇല്ലാതാക്കുക",
   "deleted a contact information": "ഒരു കോൺടാക്റ്റ് വിവരം ഇല്ലാതാക്കി",
   "deleted a goal": "ഒരു ലക്ഷ്യം ഇല്ലാതാക്കി",
   "deleted an address": "ഒരു വിലാസം ഇല്ലാതാക്കി",
@@ -480,6 +481,7 @@
   "Family": "കുടുംബം",
   "Family summary": "കുടുംബ സംഗ്രഹം",
   "Favorites": "പ്രിയപ്പെട്ടവ",
+  "Fax": "ഫാക്സ്",
   "Female": "സ്ത്രീ",
   "File": "ഫയൽ",
   "Files": "ഫയലുകൾ",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "ഗ്രൂപ്പ് തരങ്ങൾ ആളുകളെ ഒരുമിച്ച് കൂട്ടാൻ നിങ്ങളെ അനുവദിക്കുന്നു.",
   "Had a promotion": "ഒരു പ്രമോഷൻ ഉണ്ടായിരുന്നു",
   "Hamster": "ഹാംസ്റ്റർ",
+  "Hangouts": "Hangouts",
   "Have a great day,": "നല്ലൊരു ദിനം ആശംസിക്കുന്നു,",
   "he/him": "അവൻ/അവൻ",
   "Hello!": "ഹലോ!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "അയച്ച അറിയിപ്പിന്റെ ചരിത്രം",
   "Hobbies": "ഹോബികൾ",
   "Home": "വീട്",
+  "Home House": "ഹോം ഹ House സ്",
   "Horse": "കുതിര",
   "How are you?": "സുഖമാണോ?",
   "How could I have done this day better?": "ഈ ദിവസം എനിക്ക് എങ്ങനെ മികച്ചതാക്കാമായിരുന്നു?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "വിക്കിപീഡിയയിൽ നിന്നുള്ള വിവരങ്ങൾ",
   "in love with": "പ്രണയത്തിലാണ്",
   "Inspirational post": "പ്രചോദനാത്മകമായ പോസ്റ്റ്",
+  "Instagram": "ഇൻസ്റ്റാഗ്രാം",
   "Insufficient Storage": "അപര്യാപ്തമായ സംഭരണം",
   "Internal Server Error": "ഇന്റേർണൽ സെർവർ പിശക്",
   "Introduction": "ആമുഖം",
@@ -618,6 +623,7 @@
   "Just to say hello": "ഹലോ പറയാൻ മാത്രം",
   "Key name": "പ്രധാന നാമം",
   "kilometers (km)": "കിലോമീറ്റർ (കി.മീ.)",
+  "Kind": "തരം",
   "km": "കി.മീ",
   "Label:": "ലേബൽ:",
   "Labels": "ലേബലുകൾ",
@@ -706,6 +712,7 @@
   "miles": "മൈലുകൾ",
   "miles (mi)": "മൈൽ (മൈൽ)",
   "Misdirected Request": "തെറ്റായ അഭ്യർത്ഥന",
+  "Mobile": "ഇളക്കാവുന്ന",
   "Modules in this page": "ഈ പേജിലെ മൊഡ്യൂളുകൾ",
   "Monday": "തിങ്കളാഴ്ച",
   "Monica. All rights reserved. 2017 — :date.": "Monica. എല്ലാ അവകാശങ്ങളും നിക്ഷിപ്തം. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "ഇതുവരെ ലേബലുകളൊന്നുമില്ല.",
   "No life event types yet.": "ഇതുവരെ ജീവിത സംഭവങ്ങളുടെ തരങ്ങളൊന്നുമില്ല.",
   "Non-Authoritative Information": "ആധികാരികമല്ലാത്ത വിവരങ്ങൾ",
+  "None": "ഒന്നുമല്ലാത്തത്",
   "No notes found.": "കുറിപ്പുകളൊന്നും കണ്ടെത്തിയില്ല.",
   "No results found": "ഒരു ഫലവും കണ്ടെത്താനായില്ല",
   "No role": "വേഷമില്ല",
@@ -798,6 +806,7 @@
   "Other": "മറ്റുള്ളവ",
   "Out of respect and appreciation": "ബഹുമാനവും അഭിനന്ദനവും കാരണം",
   "Page Expired": "പേജ് കാലഹരണപ്പെട്ടു",
+  "Pager": "കടധകർച്ച",
   "Pages": "പേജുകൾ",
   "Pagination Navigation": "പേജിനേഷൻ നാവിഗേഷൻ",
   "Parent": "രക്ഷിതാവ്",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "സേവന നിബന്ധനകൾ",
   "Test email for Monica": "Monicaയുടെ ഇമെയിൽ പരീക്ഷിക്കുക",
   "Test email sent!": "ടെസ്റ്റ് ഇമെയിൽ അയച്ചു!",
+  "Text": "മൂലഗന്ഥം",
   "Thanks,": "നന്ദി,",
   "Thanks for giving Monica a try.": "Monica ശ്രമിച്ചതിന് നന്ദി.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "സൈൻ അപ്പ് ചെയ്തതിന് നന്ദി! ആരംഭിക്കുന്നതിന് മുമ്പ്, ഞങ്ങൾ നിങ്ങൾക്ക് ഇമെയിൽ അയച്ച ലിങ്കിൽ ക്ലിക്കുചെയ്ത് നിങ്ങളുടെ ഇമെയിൽ വിലാസം പരിശോധിക്കാമോ? നിങ്ങൾക്ക് ഇമെയിൽ ലഭിച്ചില്ലെങ്കിൽ, ഞങ്ങൾ നിങ്ങൾക്ക് സന്തോഷത്തോടെ മറ്റൊന്ന് അയയ്ക്കും.",
@@ -1274,6 +1284,7 @@
   "Translate It": "ഇത് വിവർത്തനം ചെയ്യുക",
   "Transportation": "ഗതാഗതം",
   "Tuesday": "ചൊവ്വാഴ്ച",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "രണ്ട്-ഘടക സ്ഥിരീകരണം",
   "Two Factor Authentication": "രണ്ട് ഫാക്ടർ ആധികാരികത",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "രണ്ട് ഘടകം പ്രാമാണീകരണം ഇപ്പോൾ പ്രവർത്തനക്ഷമമാക്കിയിരിക്കുന്നു. നിങ്ങളുടെ ഫോണിന്റെ ഓതന്റിക്കേറ്റർ ആപ്ലിക്കേഷൻ ഉപയോഗിച്ച് ഇനിപ്പറയുന്ന QR കോഡ് സ്കാൻ ചെയ്യുക അല്ലെങ്കിൽ സജ്ജീകരണ കീ നൽകുക.",
