--- a/lang/nl.json
+++ b/lang/nl.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Verwijder een nieuwe sleutel",
   "Delete API Token": "API-token verwijderen",
   "Delete contact": "Verwijder contact",
+  "Delete contact information": "Contactgegevens verwijderen",
   "deleted a contact information": "een contactgegevens verwijderd",
   "deleted a goal": "een doel verwijderd",
   "deleted an address": "een adres verwijderd",
@@ -480,6 +481,7 @@
   "Family": "Familie",
   "Family summary": "Familie samenvatting",
   "Favorites": "Favorieten",
+  "Fax": "Fax",
   "Female": "Vrouwelijk",
   "File": "Bestand",
   "Files": "Bestanden",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Met groepstypen kunt u mensen groeperen.",
   "Had a promotion": "Promotie gehad",
   "Hamster": "Hamster",
+  "Hangouts": "Rondhangsels",
   "Have a great day,": "Een fijne dag verder,",
   "he/him": "hij/hem",
   "Hello!": "Hallo!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Geschiedenis van de verzonden melding",
   "Hobbies": "Hobby’s",
   "Home": "Startpagina",
+  "Home House": "Thuisbasis",
   "Horse": "Paard",
   "How are you?": "Hoe is het met je?",
   "How could I have done this day better?": "Hoe had ik deze dag beter kunnen doen?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informatie uit Wikipedia",
   "in love with": "verliefd op",
   "Inspirational post": "Inspirerende post",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Onvoldoende opslag",
   "Internal Server Error": "Interne serverfout",
   "Introduction": "Invoering",
@@ -618,6 +623,7 @@
   "Just to say hello": "Gewoon om hallo te zeggen",
   "Key name": "Sleutelnaam",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Vriendelijk",
   "km": "km",
   "Label:": "Etiket:",
   "Labels": "Etiketten",
@@ -706,6 +712,7 @@
   "miles": "mijlen",
   "miles (mi)": "mijl (mijlen)",
   "Misdirected Request": "Verkeerd geadresseerd verzoek",
+  "Mobile": "Mobiel",
   "Modules in this page": "Modules op deze pagina",
   "Monday": "Maandag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle rechten voorbehouden. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Nog geen etiketten.",
   "No life event types yet.": "Er zijn nog geen typen levensgebeurtenissen.",
   "Non-Authoritative Information": "Niet-gemachtigde informatie",
+  "None": "Geen",
   "No notes found.": "Geen notities gevonden.",
   "No results found": "geen resultaten gevonden",
   "No role": "Geen rol",
@@ -798,6 +806,7 @@
   "Other": "Ander",
   "Out of respect and appreciation": "Uit respect en waardering",
   "Page Expired": "Pagina niet meer geldig",
+  "Pager": "Pager",
   "Pages": "Pagina’s",
   "Pagination Navigation": "Paginanavigatie",
   "Parent": "Ouder",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Algemene voorwaarden",
   "Test email for Monica": "Test-e-mail voor Monica",
   "Test email sent!": "Testmail verzonden!",
+  "Text": "Tekst",
   "Thanks,": "Bedankt,",
   "Thanks for giving Monica a try.": "Bedankt dat je Monica hebt geprobeerd.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Bedankt voor het aanmelden! Kunt u, voordat u aan de slag gaat, uw e-mailadres verifiëren door op de link te klikken die we zojuist naar u hebben gemaild? Als u de e-mail niet heeft ontvangen, sturen wij u graag een nieuwe.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Vertaal het",
   "Transportation": "Vervoer",
   "Tuesday": "Dinsdag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Bevestiging met twee factoren",
   "Two Factor Authentication": "Tweestapsverificatie",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Tweestapsverificatie is nu ingeschakeld. Scan de volgende QR-code met de authenticatie-applicatie van je telefoon of gebruik de setup-sleutel.",
