--- a/lang/nn.json
+++ b/lang/nn.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Slett en ny nøkkel",
   "Delete API Token": "Slett API-token",
   "Delete contact": "Slett kontakt",
+  "Delete contact information": "Slett kontaktinformasjon",
   "deleted a contact information": "slettet en kontaktinformasjon",
   "deleted a goal": "slettet et mål",
   "deleted an address": "slettet en adresse",
@@ -480,6 +481,7 @@
   "Family": "Familie",
   "Family summary": "Familieoppsummering",
   "Favorites": "Favoritter",
+  "Fax": "Faks",
   "Female": "Hunn",
   "File": "Fil",
   "Files": "Filer",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Gruppetyper lar deg gruppere folk sammen.",
   "Had a promotion": "Hadde en forfremmelse",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Ha en flott dag,",
   "he/him": "han/ham",
   "Hello!": "Hallo!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historien om varselet som ble sendt",
   "Hobbies": "Hobbyer",
   "Home": "Hjem",
+  "Home House": "Hjemmehus",
   "Horse": "Hest",
   "How are you?": "Hvordan har du det?",
   "How could I have done this day better?": "Hvordan kunne jeg ha gjort denne dagen bedre?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informasjon fra Wikipedia",
   "in love with": "forelsket i",
   "Inspirational post": "Inspirerende innlegg",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Manglende lagringsplass",
   "Internal Server Error": "intern server feil",
   "Introduction": "Introduksjon",
@@ -618,6 +623,7 @@
   "Just to say hello": "Bare for å si hei",
   "Key name": "Nøkkelnavn",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Type",
   "km": "km",
   "Label:": "Merkelapp:",
   "Labels": "Etiketter",
@@ -706,6 +712,7 @@
   "miles": "miles",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Feilrettet forespørsel",
+  "Mobile": "Mobil",
   "Modules in this page": "Moduler på denne siden",
   "Monday": "mandag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alle rettigheter forbeholdt. 2017 – :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Ingen etiketter ennå.",
   "No life event types yet.": "Ingen typer livshendelser ennå.",
   "Non-Authoritative Information": "Ikke-autoritativ informasjon",
+  "None": "Ingen",
   "No notes found.": "Ingen notater funnet.",
   "No results found": "Ingen resultater",
   "No role": "Ingen rolle",
@@ -798,6 +806,7 @@
   "Other": "Annen",
   "Out of respect and appreciation": "Av respekt og takknemlighet",
   "Page Expired": "Sida har utløpt",
+  "Pager": "Pager",
   "Pages": "Sider",
   "Pagination Navigation": "Pagineringsnavigering",
   "Parent": "Foreldre",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Vilkår for bruk",
   "Test email for Monica": "Test e-post for Monica",
   "Test email sent!": "Testmail sendt!",
+  "Text": "Tekst",
   "Thanks,": "Takk,",
   "Thanks for giving Monica a try.": "Takk for at du prøvde Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Takk for at du registrerte deg! Før du begynner, kan du bekrefte e-postadressen din ved å klikke på linken vi nettopp sendte til deg? Hvis du ikke har mottatt e-posten, sender vi deg gjerne en annen.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Oversett det",
   "Transportation": "Transport",
   "Tuesday": "tirsdag",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "To-faktor bekreftelse",
   "Two Factor Authentication": "Tofaktorautentisering",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Tofaktorautentisering er nå aktivert. Skann følgende QR-kode ved å bruke telefonens autentiseringsprogram eller skriv inn oppsettnøkkelen.",
