--- a/lang/pa.json
+++ b/lang/pa.json
@@ -386,6 +386,7 @@
   "Delete a new key": "ਇੱਕ ਨਵੀਂ ਕੁੰਜੀ ਮਿਟਾਓ",
   "Delete API Token": "API ਟੋਕਨ ਮਿਟਾਓ",
   "Delete contact": "ਸੰਪਰਕ ਮਿਟਾਓ",
+  "Delete contact information": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨੂੰ ਮਿਟਾਓ",
   "deleted a contact information": "ਇੱਕ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨੂੰ ਮਿਟਾਇਆ",
   "deleted a goal": "ਇੱਕ ਟੀਚਾ ਮਿਟਾ ਦਿੱਤਾ",
   "deleted an address": "ਇੱਕ ਪਤਾ ਮਿਟਾ ਦਿੱਤਾ",
@@ -480,6 +481,7 @@
   "Family": "ਪਰਿਵਾਰ",
   "Family summary": "ਪਰਿਵਾਰਕ ਸੰਖੇਪ",
   "Favorites": "ਮਨਪਸੰਦ",
+  "Fax": "ਫੈਕਸ",
   "Female": "ਔਰਤ",
   "File": "ਫਾਈਲ",
   "Files": "ਫਾਈਲਾਂ",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "ਸਮੂਹ ਕਿਸਮਾਂ ਤੁਹਾਨੂੰ ਲੋਕਾਂ ਨੂੰ ਇਕੱਠੇ ਸਮੂਹ ਕਰਨ ਦਿੰਦੀਆਂ ਹਨ।",
   "Had a promotion": "ਦੀ ਤਰੱਕੀ ਹੋਈ ਸੀ",
   "Hamster": "ਹੈਮਸਟਰ",
+  "Hangouts": "ਹੈਂਗਆਉਟਸ",
   "Have a great day,": "ਤੁਹਾਡਾ ਦਿਨ ਅੱਛਾ ਹੋਵੇ,",
   "he/him": "ਉਹ/ਉਸਨੂੰ",
   "Hello!": "ਸਤ ਸ੍ਰੀ ਅਕਾਲ!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "ਭੇਜੀ ਗਈ ਸੂਚਨਾ ਦਾ ਇਤਿਹਾਸ",
   "Hobbies": "ਸ਼ੌਕ",
   "Home": "ਘਰ",
+  "Home House": "ਘਰ ਦਾ ਘਰ",
   "Horse": "ਘੋੜਾ",
   "How are you?": "ਤੁਸੀ ਕਿਵੇਂ ਹੋ?",
   "How could I have done this day better?": "ਮੈਂ ਇਸ ਦਿਨ ਨੂੰ ਬਿਹਤਰ ਕਿਵੇਂ ਕਰ ਸਕਦਾ ਸੀ?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "ਵਿਕੀਪੀਡੀਆ ਤੋਂ ਜਾਣਕਾਰੀ",
   "in love with": "ਨਾਲ ਪਿਆਰ ਵਿੱਚ",
   "Inspirational post": "ਪ੍ਰੇਰਣਾਦਾਇਕ ਪੋਸਟ",
+  "Instagram": "ਇੰਸਟਾਗ੍ਰਾਮ",
   "Insufficient Storage": "ਨਾਕਾਫ਼ੀ ਸਟੋਰੇਜ",
   "Internal Server Error": "ਅੰਦਰੂਨੀ ਸਰਵਰ ਗੜਬੜ",
   "Introduction": "ਜਾਣ-ਪਛਾਣ",
@@ -618,6 +623,7 @@
   "Just to say hello": "ਸਿਰਫ਼ ਹੈਲੋ ਕਹਿਣ ਲਈ",
   "Key name": "ਮੁੱਖ ਨਾਮ",
   "kilometers (km)": "ਕਿਲੋਮੀਟਰ (ਕਿ.ਮੀ.)",
+  "Kind": "ਦਿਆਲੂ",
   "km": "ਕਿਲੋਮੀਟਰ",
   "Label:": "ਲੇਬਲ:",
   "Labels": "ਲੇਬਲ",
@@ -706,6 +712,7 @@
   "miles": "ਮੀਲ",
   "miles (mi)": "ਮੀਲ (ਮੀਲ)",
   "Misdirected Request": "ਗਲਤ ਨਿਰਦੇਸ਼ਿਤ ਬੇਨਤੀ",
+  "Mobile": "ਮੋਬਾਈਲ",
   "Modules in this page": "ਇਸ ਪੰਨੇ ਵਿੱਚ ਮੋਡੀਊਲ",
   "Monday": "ਸੋਮਵਾਰ",
   "Monica. All rights reserved. 2017 — :date.": "Monica। ਸਾਰੇ ਹੱਕ ਰਾਖਵੇਂ ਹਨ. 2017 — :date।",
@@ -751,6 +758,7 @@
   "No labels yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਲੇਬਲ ਨਹੀਂ।",
   "No life event types yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਜੀਵਨ ਘਟਨਾ ਕਿਸਮ ਨਹੀਂ ਹੈ।",
   "Non-Authoritative Information": "ਗੈਰ-ਪ੍ਰਮਾਣਿਕ ​​ਜਾਣਕਾਰੀ",
+  "None": "ਕੋਈ ਨਹੀਂ",
   "No notes found.": "ਕੋਈ ਨੋਟ ਨਹੀਂ ਮਿਲੇ।",
   "No results found": "ਕੋਈ ਨਤੀਜੇ ਨਹੀਂ ਮਿਲੇ",
   "No role": "ਕੋਈ ਭੂਮਿਕਾ ਨਹੀਂ",
@@ -798,6 +806,7 @@
   "Other": "ਹੋਰ",
   "Out of respect and appreciation": "ਸਤਿਕਾਰ ਅਤੇ ਪ੍ਰਸ਼ੰਸਾ ਦੇ ਬਾਹਰ",
   "Page Expired": "ਪੰਨੇ ਦੀ ਮਿਆਦ ਪੁੱਗ ਗਈ",
+  "Pager": "ਪੇਜ਼ਰ",
   "Pages": "ਪੰਨੇ",
   "Pagination Navigation": "ਪੰਨਾ ਨੈਵੀਗੇਸ਼ਨ",
   "Parent": "ਮਾਪੇ",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "ਸੇਵਾ ਦੀਆਂ ਸ਼ਰਤਾਂ",
   "Test email for Monica": "Monica ਲਈ ਟੈਸਟ ਈਮੇਲ",
   "Test email sent!": "ਟੈਸਟ ਈਮੇਲ ਭੇਜੀ ਗਈ!",
+  "Text": "ਟੈਕਸਟ",
   "Thanks,": "ਧੰਨਵਾਦ,",
   "Thanks for giving Monica a try.": "Monica ਨੂੰ ਅਜ਼ਮਾਉਣ ਲਈ ਧੰਨਵਾਦ।",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "ਸਾਈਨ ਅੱਪ ਕਰਨ ਲਈ ਧੰਨਵਾਦ! ਸ਼ੁਰੂ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ, ਕੀ ਤੁਸੀਂ ਉਸ ਲਿੰਕ ’ਤੇ ਕਲਿੱਕ ਕਰਕੇ ਆਪਣੇ ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰ ਸਕਦੇ ਹੋ ਜੋ ਅਸੀਂ ਤੁਹਾਨੂੰ ਈਮੇਲ ਕੀਤਾ ਹੈ? ਜੇਕਰ ਤੁਹਾਨੂੰ ਈਮੇਲ ਪ੍ਰਾਪਤ ਨਹੀਂ ਹੋਈ, ਤਾਂ ਅਸੀਂ ਖੁਸ਼ੀ ਨਾਲ ਤੁਹਾਨੂੰ ਇੱਕ ਹੋਰ ਭੇਜਾਂਗੇ।",
@@ -1274,6 +1284,7 @@
   "Translate It": "ਇਸਦਾ ਅਨੁਵਾਦ ਕਰੋ",
   "Transportation": "ਆਵਾਜਾਈ",
   "Tuesday": "ਮੰਗਲਵਾਰ",
+  "Twitter": "ਟਵਿੱਟਰ",
   "Two-factor Confirmation": "ਦੋ-ਕਾਰਕ ਪੁਸ਼ਟੀ",
   "Two Factor Authentication": "ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ ਹੁਣ ਸਮਰੱਥ ਹੈ। ਆਪਣੇ ਫ਼ੋਨ ਦੀ ਪ੍ਰਮਾਣਕ ਐਪਲੀਕੇਸ਼ਨ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਹੇਠਾਂ ਦਿੱਤੇ QR ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰੋ ਜਾਂ ਸੈੱਟਅੱਪ ਕੁੰਜੀ ਦਾਖਲ ਕਰੋ।",
