--- a/lang/pl.json
+++ b/lang/pl.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Usuń nowy klucz",
   "Delete API Token": "Usuń Token API",
   "Delete contact": "Usuń kontakt",
+  "Delete contact information": "Usuń dane kontaktowe",
   "deleted a contact information": "usunięto dane kontaktowe",
   "deleted a goal": "usunął cel",
   "deleted an address": "usunięto adres",
@@ -480,6 +481,7 @@
   "Family": "Rodzina",
   "Family summary": "Podsumowanie rodzinne",
   "Favorites": "Ulubione",
+  "Fax": "Faks",
   "Female": "Kobieta",
   "File": "Plik",
   "Files": "Pliki",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Typy grup umożliwiają grupowanie osób.",
   "Had a promotion": "Miał awans",
   "Hamster": "Chomik",
+  "Hangouts": "Hangouty",
   "Have a great day,": "Miłego dnia,",
   "he/him": "on/on",
   "Hello!": "Cześć!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historia wysłanego powiadomienia",
   "Hobbies": "Zainteresowania",
   "Home": "Strona główna",
+  "Home House": "Domowy dom",
   "Horse": "Koń",
   "How are you?": "Jak się masz?",
   "How could I have done this day better?": "Jak mogłem lepiej przeżyć ten dzień?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informacje z Wikipedii",
   "in love with": "zakochany w",
   "Inspirational post": "Inspirujący wpis",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Niewystarczające miejsce do przechowywania",
   "Internal Server Error": "Wewnętrzny błąd serwera",
   "Introduction": "Wprowadzenie",
@@ -618,6 +623,7 @@
   "Just to say hello": "Tylko żeby się przywitać",
   "Key name": "Nazwa klucza",
   "kilometers (km)": "kilometry (km)",
+  "Kind": "Uprzejmy",
   "km": "km",
   "Label:": "Etykieta:",
   "Labels": "Etykiety",
@@ -706,6 +712,7 @@
   "miles": "mile",
   "miles (mi)": "mile (mi)",
   "Misdirected Request": "Błędnie skierowane żądanie",
+  "Mobile": "Przenośny",
   "Modules in this page": "Moduły na tej stronie",
   "Monday": "Poniedziałek",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Wszelkie prawa zastrzeżone. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Nie ma jeszcze etykiet.",
   "No life event types yet.": "Nie ma jeszcze typów wydarzeń życiowych.",
   "Non-Authoritative Information": "Informacje niepotwierdzone",
+  "None": "Nic",
   "No notes found.": "Nie znaleziono żadnych notatek.",
   "No results found": "Nie znaleziono wyników",
   "No role": "Żadnej roli",
@@ -798,6 +806,7 @@
   "Other": "Inny",
   "Out of respect and appreciation": "Z szacunku i uznania",
   "Page Expired": "Strona Wygasła",
+  "Pager": "Pager",
   "Pages": "Strony",
   "Pagination Navigation": "Nawigacja Stron",
   "Parent": "Rodzic",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Warunki Korzystania z Usługi",
   "Test email for Monica": "Testowy e-mail dla Monica",
   "Test email sent!": "Testowy e-mail wysłany!",
+  "Text": "Tekst",
   "Thanks,": "Dzięki,",
   "Thanks for giving Monica a try.": "Dziękuję za umożliwienie Monica wypróbowania.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Dziękujemy za zarejestrowanie się! Czy zanim zaczniesz, możesz zweryfikować swój adres e-mail, klikając link, który właśnie wysłaliśmy do Ciebie e-mailem? Jeśli nie otrzymałeś wiadomości e-mail, z przyjemnością wyślemy Ci kolejną.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Przetłumacz to",
   "Transportation": "Transport",
   "Tuesday": "Wtorek",
+  "Twitter": "Świergot",
   "Two-factor Confirmation": "Potwierdzenie dwuczynnikowe",
   "Two Factor Authentication": "Uwierzytelnianie Dwuskładnikowe",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Uwierzytelnianie dwuskładnikowe jest teraz aktywne. Zeskanuj poniższy kod QR za pomocą aplikacji uwierzytelniającej w telefonie lub wprowadź klucz ustawień.",
