--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Excluir uma nova chave",
   "Delete API Token": "Excluir Token da API",
   "Delete contact": "Excluir contato",
+  "Delete contact information": "Excluir informações de contato",
   "deleted a contact information": "excluiu uma informação de contato",
   "deleted a goal": "excluiu um gol",
   "deleted an address": "excluiu um endereço",
@@ -480,6 +481,7 @@
   "Family": "Família",
   "Family summary": "Resumo da família",
   "Favorites": "Favoritos",
+  "Fax": "Fax",
   "Female": "Fêmea",
   "File": "Arquivo",
   "Files": "arquivos",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Os tipos de grupo permitem agrupar pessoas.",
   "Had a promotion": "Teve uma promoção",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Tenha um ótimo dia,",
   "he/him": "ele/ele",
   "Hello!": "Olá!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Histórico da notificação enviada",
   "Hobbies": "Hobbies",
   "Home": "Lar",
+  "Home House": "Casa de casa",
   "Horse": "Cavalo",
   "How are you?": "Como vai você?",
   "How could I have done this day better?": "Como eu poderia ter feito melhor este dia?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informações da Wikipédia",
   "in love with": "apaixonado por",
   "Inspirational post": "Postagem inspiradora",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Armazenamento Insuficiente",
   "Internal Server Error": "Erro Interno Do Servidor",
   "Introduction": "Introdução",
@@ -618,6 +623,7 @@
   "Just to say hello": "Apenas para dizer olá",
   "Key name": "Nome da chave",
   "kilometers (km)": "quilômetros (km)",
+  "Kind": "Tipo",
   "km": "quilômetros",
   "Label:": "Rótulo:",
   "Labels": "Etiquetas",
@@ -706,6 +712,7 @@
   "miles": "milhas",
   "miles (mi)": "milhas (mi)",
   "Misdirected Request": "Solicitação Mal Direcionada",
+  "Mobile": "Móvel",
   "Modules in this page": "Módulos nesta página",
   "Monday": "Segunda-feira",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Todos os direitos reservados. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Ainda não há rótulos.",
   "No life event types yet.": "Ainda não há tipos de eventos de vida.",
   "Non-Authoritative Information": "Informações Não Autorizadas",
+  "None": "Nenhum",
   "No notes found.": "Nenhuma nota encontrada.",
   "No results found": "Nenhum resultado encontrado",
   "No role": "Sem função",
@@ -798,6 +806,7 @@
   "Other": "Outro",
   "Out of respect and appreciation": "Por respeito e apreço",
   "Page Expired": "Página expirou",
+  "Pager": "Pager",
   "Pages": "Páginas",
   "Pagination Navigation": "Navegação da Paginação",
   "Parent": "Pai",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Termos de Serviço",
   "Test email for Monica": "E-mail de teste para Monica",
   "Test email sent!": "E-mail de teste enviado!",
+  "Text": "Texto",
   "Thanks,": "Obrigado,",
   "Thanks for giving Monica a try.": "Obrigado por dar uma chance à Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Obrigado por inscrever-se! Antes de começar, você poderia verificar seu endereço de e-mail clicando no link que acabamos de enviar para você? Se você não recebeu o e-mail, teremos prazer em lhe enviar outro.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Traduza isso",
   "Transportation": "Transporte",
   "Tuesday": "Terça-feira",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Confirmação de dois fatores",
   "Two Factor Authentication": "Autenticação em dois fatores",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "A autenticação de dois fatores agora está habilitada. Digitalize o código QR a seguir usando o aplicativo autenticador do seu telefone ou digite a chave de configuração.",
