--- a/lang/ro.json
+++ b/lang/ro.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Ștergeți o cheie nouă",
   "Delete API Token": "Șterge simbolul API",
   "Delete contact": "Ștergeți contactul",
+  "Delete contact information": "Ștergeți informațiile de contact",
   "deleted a contact information": "a șters o informație de contact",
   "deleted a goal": "a șters un gol",
   "deleted an address": "a șters o adresă",
@@ -480,6 +481,7 @@
   "Family": "Familie",
   "Family summary": "Rezumatul familiei",
   "Favorites": "Favorite",
+  "Fax": "Fax",
   "Female": "Femeie",
   "File": "Fişier",
   "Files": "Fișiere",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Tipurile de grup vă permit să grupați oameni împreună.",
   "Had a promotion": "A avut o promovare",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "O zi bună,",
   "he/him": "el/lui",
   "Hello!": "Bună!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Istoricul notificării trimise",
   "Hobbies": "Hobby-uri",
   "Home": "Pagina principală",
+  "Home House": "Casa de casă",
   "Horse": "Cal",
   "How are you?": "Ce mai faci?",
   "How could I have done this day better?": "Cum aș fi putut face ziua asta mai bine?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Informații de pe Wikipedia",
   "in love with": "în dragoste cu",
   "Inspirational post": "Postare de inspirație",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Spațiu de stocare insuficient",
   "Internal Server Error": "Internal Server Error",
   "Introduction": "Introducere",
@@ -618,6 +623,7 @@
   "Just to say hello": "Doar pentru a saluta",
   "Key name": "Numele cheii",
   "kilometers (km)": "kilometri (km)",
+  "Kind": "Fel",
   "km": "km",
   "Label:": "Eticheta:",
   "Labels": "Etichete",
@@ -706,6 +712,7 @@
   "miles": "mile",
   "miles (mi)": "mile (mi)",
   "Misdirected Request": "Solicitare direcționată greșit",
+  "Mobile": "Mobil",
   "Modules in this page": "Modulele din această pagină",
   "Monday": "luni",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Toate drepturile rezervate. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Încă nu există etichete.",
   "No life event types yet.": "Încă nu există tipuri de evenimente de viață.",
   "Non-Authoritative Information": "Informații neautoritare",
+  "None": "Nici unul",
   "No notes found.": "Nu s-au găsit note.",
   "No results found": "Nici un rezultat gasit",
   "No role": "Nici un rol",
@@ -798,6 +806,7 @@
   "Other": "Alte",
   "Out of respect and appreciation": "Din respect și apreciere",
   "Page Expired": "Pagina a expirat",
+  "Pager": "Pager",
   "Pages": "Pagini",
   "Pagination Navigation": "Navigare Paginare",
   "Parent": "Mamă",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Termenii serviciului",
   "Test email for Monica": "E-mail de testare pentru Monica",
   "Test email sent!": "E-mail de test trimis!",
+  "Text": "Text",
   "Thanks,": "Mulțumiri,",
   "Thanks for giving Monica a try.": "Mulțumesc că ai încercat Monica.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Mulțumesc pentru înscriere! Înainte de a începe, ați putea să vă verificați adresa de e-mail făcând clic pe linkul pe care tocmai vi l-am trimis prin e-mail? Dacă nu ați primit e-mailul, vă vom trimite cu plăcere altul.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Traduceți-l",
   "Transportation": "Transport",
   "Tuesday": "marţi",
+  "Twitter": "Stare de nervozitate",
   "Two-factor Confirmation": "Confirmare cu doi factori",
   "Two Factor Authentication": "Autentificare Cu Doi Factori",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Autentificarea cu doi factori este acum activată. Scanați următorul cod QR folosind aplicația de autentificare a telefonului sau introduceți cheia de configurare.",
