--- a/lang/ru.json
+++ b/lang/ru.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Удалить новый ключ",
   "Delete API Token": "Удалить API токен",
   "Delete contact": "Удалить контакт",
+  "Delete contact information": "Удалить контактную информацию",
   "deleted a contact information": "удалил контактную информацию",
   "deleted a goal": "удалил цель",
   "deleted an address": "удалил адрес",
@@ -480,6 +481,7 @@
   "Family": "Семья",
   "Family summary": "Семейное резюме",
   "Favorites": "Избранное",
+  "Fax": "Факс",
   "Female": "Женский",
   "File": "Файл",
   "Files": "Файлы",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Типы групп позволяют группировать людей вместе.",
   "Had a promotion": "Было повышение по службе",
   "Hamster": "Хомяк",
+  "Hangouts": "Тусовщики",
   "Have a great day,": "Хорошего дня,",
   "he/him": "он/его",
   "Hello!": "Здравствуйте!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "История отправленных уведомлений",
   "Hobbies": "Увлечения",
   "Home": "На главную",
+  "Home House": "Домашний дом",
   "Horse": "Лошадь",
   "How are you?": "Как вы?",
   "How could I have done this day better?": "Как я мог провести этот день лучше?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Информация из Википедии",
   "in love with": "влюблен в",
   "Inspirational post": "Вдохновляющий пост",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Переполнение хранилища",
   "Internal Server Error": "Внутренняя ошибка",
   "Introduction": "Введение",
@@ -618,6 +623,7 @@
   "Just to say hello": "Просто чтобы поздороваться",
   "Key name": "Имя ключа",
   "kilometers (km)": "километры (км)",
+  "Kind": "Добрый",
   "km": "км",
   "Label:": "Этикетка:",
   "Labels": "Этикетки",
@@ -706,6 +712,7 @@
   "miles": "миль",
   "miles (mi)": "мили (ми)",
   "Misdirected Request": "Неверный запрос",
+  "Mobile": "Мобильный",
   "Modules in this page": "Модули на этой странице",
   "Monday": "Понедельник",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Все права защищены. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Этикеток пока нет.",
   "No life event types yet.": "Типов жизненных событий пока нет.",
   "Non-Authoritative Information": "Информация не авторитетна",
+  "None": "Никто",
   "No notes found.": "Заметок не найдено.",
   "No results found": "результатов не найдено",
   "No role": "Нет роли",
@@ -798,6 +806,7 @@
   "Other": "Другой",
   "Out of respect and appreciation": "Из уважения и признательности",
   "Page Expired": "Страница устарела",
+  "Pager": "Пейджер",
   "Pages": "Страницы",
   "Pagination Navigation": "Навигация",
   "Parent": "Родитель",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Условия обслуживания",
   "Test email for Monica": "Тестовое письмо для Monica",
   "Test email sent!": "Тестовое письмо отправлено!",
+  "Text": "Текст",
   "Thanks,": "Спасибо,",
   "Thanks for giving Monica a try.": "Спасибо, что дали Monica шанс.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Спасибо за регистрацию! Прежде чем начать, не могли бы вы подтвердить свой адрес электронной почты, нажав на ссылку, которую мы только что отправили вам по электронной почте? Если вы не получили письмо, мы с радостью отправим вам другое.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Перевести",
   "Transportation": "Транспорт",
   "Tuesday": "Вторник",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Двухфакторное подтверждение",
   "Two Factor Authentication": "Двухфакторная аутентификация",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Двухфакторная аутентификация успешно активирована. Отсканируйте следующий QR-код при помощи приложения аутентификации на Вашем телефоне для проверки подлинности или введите ключ настройки.",
