--- a/lang/sv.json
+++ b/lang/sv.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Ta bort en ny nyckel",
   "Delete API Token": "Radera API-token",
   "Delete contact": "Ta bort kontakt",
+  "Delete contact information": "Ta bort kontaktinformation",
   "deleted a contact information": "raderade en kontaktinformation",
   "deleted a goal": "raderade ett mål",
   "deleted an address": "raderade en adress",
@@ -480,6 +481,7 @@
   "Family": "Familj",
   "Family summary": "Familjesammanfattning",
   "Favorites": "Favoriter",
+  "Fax": "Fax",
   "Female": "Kvinna",
   "File": "Fil",
   "Files": "Filer",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Grupptyper låter dig gruppera personer tillsammans.",
   "Had a promotion": "Hade en befordran",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Ha en bra dag,",
   "he/him": "han/honom",
   "Hello!": "Hej!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Historik för det skickade meddelandet",
   "Hobbies": "Hobbyer",
   "Home": "Hem",
+  "Home House": "Hemhus",
   "Horse": "Häst",
   "How are you?": "Hur mår du?",
   "How could I have done this day better?": "Hur kunde jag ha gjort den här dagen bättre?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Information från Wikipedia",
   "in love with": "förälskad i",
   "Inspirational post": "Inspirerande inlägg",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Otillräckligt förvaringsutrymme",
   "Internal Server Error": "internt serverfel",
   "Introduction": "Introduktion",
@@ -618,6 +623,7 @@
   "Just to say hello": "Bara för att säga hej",
   "Key name": "Nyckelnamn",
   "kilometers (km)": "kilometer (km)",
+  "Kind": "Slag",
   "km": "km",
   "Label:": "Märka:",
   "Labels": "Etiketter",
@@ -706,6 +712,7 @@
   "miles": "mil",
   "miles (mi)": "miles (mi)",
   "Misdirected Request": "Felriktad begäran",
+  "Mobile": "Mobil",
   "Modules in this page": "Moduler på denna sida",
   "Monday": "måndag",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Alla rättigheter förbehållna. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Inga etiketter ännu.",
   "No life event types yet.": "Inga typer av livshändelser än.",
   "Non-Authoritative Information": "Icke-auktoritativ information",
+  "None": "Ingen",
   "No notes found.": "Inga anteckningar hittades.",
   "No results found": "Inga resultat funna",
   "No role": "Ingen roll",
@@ -798,6 +806,7 @@
   "Other": "Övrig",
   "Out of respect and appreciation": "Av respekt och uppskattning",
   "Page Expired": "Sidan är utgången",
+  "Pager": "Personsökare",
   "Pages": "Sidor",
   "Pagination Navigation": "Sidnumrering Navigering",
   "Parent": "Förälder",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "användarvillkor",
   "Test email for Monica": "Testmail för Monica",
   "Test email sent!": "Testmail skickat!",
+  "Text": "Text",
   "Thanks,": "Tack,",
   "Thanks for giving Monica a try.": "Tack för att du gav Monica ett försök.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Tack för att du registrerade dig! Innan du börjar, kan du verifiera din e-postadress genom att klicka på länken vi just skickade till dig via e-post? Om du inte har fått e-postmeddelandet skickar vi gärna ett till.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Översätt det",
   "Transportation": "Transport",
   "Tuesday": "tisdag",
+  "Twitter": "Kvittra",
   "Two-factor Confirmation": "Tvåfaktorsbekräftelse",
   "Two Factor Authentication": "Tvåfaktorsautentisering",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Tvåfaktorsautentisering är nu aktiverad. Skanna följande QR-kod med telefonens autentiseringsprogram eller ange inställningsnyckeln.",
