--- a/lang/te.json
+++ b/lang/te.json
@@ -386,6 +386,7 @@
   "Delete a new key": "కొత్త కీని తొలగించండి",
   "Delete API Token": "API టోకెన్‌ను తొలగించండి",
   "Delete contact": "పరిచయాన్ని తొలగించండి",
+  "Delete contact information": "సంప్రదింపు సమాచారాన్ని తొలగించండి",
   "deleted a contact information": "సంప్రదింపు సమాచారాన్ని తొలగించారు",
   "deleted a goal": "ఒక లక్ష్యం తొలగించబడింది",
   "deleted an address": "చిరునామాను తొలగించారు",
@@ -480,6 +481,7 @@
   "Family": "కుటుంబం",
   "Family summary": "కుటుంబ సారాంశం",
   "Favorites": "ఇష్టమైనవి",
+  "Fax": "ఫ్యాక్స్",
   "Female": "స్త్రీ",
   "File": "ఫైల్",
   "Files": "ఫైళ్లు",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "సమూహ రకాలు మిమ్మల్ని వ్యక్తులను సమూహపరచడానికి అనుమతిస్తాయి.",
   "Had a promotion": "ప్రమోషన్ వచ్చింది",
   "Hamster": "చిట్టెలుక",
+  "Hangouts": "Hangouts",
   "Have a great day,": "ఈ రోజు మీకు కుశలంగా ఉండును,",
   "he/him": "అతను/అతడు",
   "Hello!": "హలో!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "పంపిన నోటిఫికేషన్ చరిత్ర",
   "Hobbies": "అభిరుచులు",
   "Home": "హోమ్",
+  "Home House": "హోమ్ హౌస్",
   "Horse": "గుర్రం",
   "How are you?": "మీరు ఎలా ఉన్నారు?",
   "How could I have done this day better?": "నేను ఈ రోజును ఎలా మెరుగ్గా చేయగలను?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "వికీపీడియా నుండి సమాచారం",
   "in love with": "ప్రేమలో",
   "Inspirational post": "స్ఫూర్తిదాయకమైన పోస్ట్",
+  "Instagram": "Instagram",
   "Insufficient Storage": "తగినంత నిల్వ లేదు",
   "Internal Server Error": "అంతర్గత సర్వర్ లోపం",
   "Introduction": "పరిచయం",
@@ -618,6 +623,7 @@
   "Just to say hello": "కేవలం హలో చెప్పడానికే",
   "Key name": "ముఖ్య పేరు",
   "kilometers (km)": "కిలోమీటర్లు (కిమీ)",
+  "Kind": "రకమైన",
   "km": "కి.మీ",
   "Label:": "లేబుల్:",
   "Labels": "లేబుల్స్",
@@ -706,6 +712,7 @@
   "miles": "మైళ్లు",
   "miles (mi)": "మైళ్లు (మై)",
   "Misdirected Request": "తప్పుదారి పట్టించిన అభ్యర్థన",
+  "Mobile": "మొబైల్",
   "Modules in this page": "ఈ పేజీలో మాడ్యూల్స్",
   "Monday": "సోమవారం",
   "Monica. All rights reserved. 2017 — :date.": "Monica. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "ఇంకా లేబుల్‌లు లేవు.",
   "No life event types yet.": "జీవిత సంఘటనల రకాలు ఇంకా లేవు.",
   "Non-Authoritative Information": "అధీకృత సమాచారం",
+  "None": "ఏదీ లేదు",
   "No notes found.": "గమనికలు కనుగొనబడలేదు.",
   "No results found": "ఎటువంటి ఫలితాలు లభించలేదు",
   "No role": "పాత్ర లేదు",
@@ -798,6 +806,7 @@
   "Other": "ఇతర",
   "Out of respect and appreciation": "గౌరవం మరియు ప్రశంసల నుండి",
   "Page Expired": "పేజీ గడువు ముగిసింది",
+  "Pager": "పేజర్",
   "Pages": "పేజీలు",
   "Pagination Navigation": "పేజినేషన్ నావిగేషన్",
   "Parent": "తల్లిదండ్రులు",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "సేవా నిబంధనలు",
   "Test email for Monica": "Monica కోసం పరీక్ష ఇమెయిల్",
   "Test email sent!": "పరీక్ష ఇమెయిల్ పంపబడింది!",
+  "Text": "వచనం",
   "Thanks,": "ధన్యవాదాలు,",
   "Thanks for giving Monica a try.": "Monica ఒకసారి ప్రయత్నించినందుకు ధన్యవాదాలు.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "సైన్ అప్ చేసినందుకు ధన్యవాదాలు! ప్రారంభించడానికి ముందు, మేము మీకు ఇమెయిల్ పంపిన లింక్‌పై క్లిక్ చేయడం ద్వారా మీరు మీ ఇమెయిల్ చిరునామాను ధృవీకరించగలరా? మీరు ఇమెయిల్‌ను అందుకోకుంటే, మేము మీకు మరొకటి పంపుతాము.",
@@ -1274,6 +1284,7 @@
   "Translate It": "అనువదించండి",
   "Transportation": "రవాణా",
   "Tuesday": "మంగళవారం",
+  "Twitter": "ట్విట్టర్",
   "Two-factor Confirmation": "రెండు-కారకాల నిర్ధారణ",
   "Two Factor Authentication": "రెండు కారకాల ప్రమాణీకరణ",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "రెండు కారకాల ప్రమాణీకరణ ఇప్పుడు ప్రారంభించబడింది. మీ ఫోన్ ప్రామాణీకరణ అప్లికేషన్‌ని ఉపయోగించి క్రింది QR కోడ్‌ని స్కాన్ చేయండి లేదా సెటప్ కీని నమోదు చేయండి.",
