--- a/lang/tr.json
+++ b/lang/tr.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Yeni bir anahtarı silin",
   "Delete API Token": "API Jetonunu Sil",
   "Delete contact": "Kişiyi silmek",
+  "Delete contact information": "İletişim bilgilerini sil",
   "deleted a contact information": "bir iletişim bilgisini sildim",
   "deleted a goal": "bir hedefi sildim",
   "deleted an address": "bir adresi sildim",
@@ -480,6 +481,7 @@
   "Family": "Aile",
   "Family summary": "Aile özeti",
   "Favorites": "Favoriler",
+  "Fax": "Faks",
   "Female": "Dişi",
   "File": "Dosya",
   "Files": "Dosyalar",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Grup türleri, insanları bir arada gruplandırmanıza olanak tanır.",
   "Had a promotion": "Promosyon vardı",
   "Hamster": "Hamster",
+  "Hangouts": "Hangouts",
   "Have a great day,": "İyi günler,",
   "he/him": "o / o",
   "Hello!": "Merhaba!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Gönderilen bildirimin geçmişi",
   "Hobbies": "Hobiler",
   "Home": "Ev",
+  "Home House": "Ev",
   "Horse": "Atış",
   "How are you?": "Nasılsın?",
   "How could I have done this day better?": "Bu günü nasıl daha iyi geçirebilirdim?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Wikipedia’dan bilgi",
   "in love with": "birine aşık olmak",
   "Inspirational post": "İlham verici yazı",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Yetersiz depolama",
   "Internal Server Error": "İç Sunucu Hatası",
   "Introduction": "giriiş",
@@ -618,6 +623,7 @@
   "Just to say hello": "Sadece merhaba de",
   "Key name": "Anahtar adı",
   "kilometers (km)": "kilometre (km)",
+  "Kind": "Tür",
   "km": "kilometre",
   "Label:": "Etiket:",
   "Labels": "Etiketler",
@@ -706,6 +712,7 @@
   "miles": "mil",
   "miles (mi)": "mil (mil)",
   "Misdirected Request": "Yanlış Yönlendirilmiş İstek",
+  "Mobile": "Hareketli",
   "Modules in this page": "Bu sayfadaki modüller",
   "Monday": "Pazartesi",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Her hakkı saklıdır. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Henüz etiket yok.",
   "No life event types yet.": "Henüz yaşam olayı türü yok.",
   "Non-Authoritative Information": "Yetkili Olmayan Bilgiler",
+  "None": "Hiçbiri",
   "No notes found.": "Hiçbir not bulunamadı.",
   "No results found": "Sonuç bulunamadı",
   "No role": "Rol yok",
@@ -798,6 +806,7 @@
   "Other": "Diğer",
   "Out of respect and appreciation": "Saygı ve takdir nedeniyle",
   "Page Expired": "Sayfa zaman aşımına uğradı",
+  "Pager": "Çağrı cihazı",
   "Pages": "Sayfalar",
   "Pagination Navigation": "Sayfalandırma Çubuğu",
   "Parent": "Ebeveyn",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Hizmet Koşulları",
   "Test email for Monica": "Monica için e-postayı test edin",
   "Test email sent!": "Test e-postası gönderildi!",
+  "Text": "Metin",
   "Thanks,": "Teşekkürler,",
   "Thanks for giving Monica a try.": "Monica’yı denediğiniz için teşekkürler.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Üye olduğunuz için teşekkürler! Başlamadan önce, size az önce e-postayla gönderdiğimiz bağlantıya tıklayarak e-posta adresinizi doğrulayabilir misiniz? E-postayı almadıysanız, size memnuniyetle başka bir e-posta göndeririz.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Çevir",
   "Transportation": "Toplu taşıma",
   "Tuesday": "Salı",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "İki Faktörlü Doğrulama",
   "Two Factor Authentication": "İki Faktörlü Kimlik Doğrulama",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "İki faktörlü kimlik doğrulama şimdi etkinleştirildi. Telefonunuzun kimlik doğrulama uygulamasını kullanarak aşağıdaki QR kodunu tarayın veya kurulum anahtarını girin.",
