--- a/lang/ur.json
+++ b/lang/ur.json
@@ -386,6 +386,7 @@
   "Delete a new key": "ایک نئی کلید کو حذف کریں۔",
   "Delete API Token": "کو حذف API ٹوکن",
   "Delete contact": "رابطہ حذف کریں۔",
+  "Delete contact information": "رابطے کی معلومات کو حذف کریں",
   "deleted a contact information": "ایک رابطے کی معلومات کو حذف کر دیا",
   "deleted a goal": "ایک مقصد کو حذف کر دیا",
   "deleted an address": "ایک پتہ حذف کر دیا",
@@ -480,6 +481,7 @@
   "Family": "خاندان",
   "Family summary": "خاندانی خلاصہ",
   "Favorites": "پسندیدہ",
+  "Fax": "فیکس",
   "Female": "عورت",
   "File": "فائل",
   "Files": "فائلوں",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "گروپ کی قسمیں آپ کو لوگوں کو ایک ساتھ گروپ کرنے دیتی ہیں۔",
   "Had a promotion": "پروموشن ہوا تھا۔",
   "Hamster": "ہیمسٹر",
+  "Hangouts": "hangouts",
   "Have a great day,": "آپ کا دن اچھا گزرے،",
   "he/him": "وہ/وہ",
   "Hello!": "ہیلو!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "بھیجے گئے نوٹیفکیشن کی تاریخ",
   "Hobbies": "شوق",
   "Home": "گھر",
+  "Home House": "گھر گھر",
   "Horse": "گھوڑا",
   "How are you?": "آپ کیسے ہو؟",
   "How could I have done this day better?": "میں اس دن کو کیسے بہتر کر سکتا تھا؟",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "ویکیپیڈیا سے معلومات",
   "in love with": "پیار میں",
   "Inspirational post": "متاثر کن پوسٹ",
+  "Instagram": "انسٹاگرام",
   "Insufficient Storage": "ناکافی اسٹوریج",
   "Internal Server Error": "اندرونی سرور کی خرابی",
   "Introduction": "تعارف",
@@ -618,6 +623,7 @@
   "Just to say hello": "صرف ہیلو کہنے کے لیے",
   "Key name": "کلیدی نام",
   "kilometers (km)": "کلومیٹر (کلومیٹر)",
+  "Kind": "قسم",
   "km": "کلومیٹر",
   "Label:": "لیبل:",
   "Labels": "لیبلز",
@@ -643,7 +649,7 @@
   "Life metrics": "زندگی کی پیمائش",
   "Life metrics let you track metrics that are important to you.": "لائف میٹرکس آپ کو ان میٹرکس کو ٹریک کرنے دیتی ہیں جو آپ کے لیے اہم ہیں۔",
   "Like": "پسند",
-  "LinkedIn": "LinkedIn",
+  "LinkedIn": "لنکڈ",
   "List of addresses": "پتوں کی فہرست",
   "List of addresses of the contacts in the vault": "والٹ میں رابطوں کے پتوں کی فہرست",
   "List of all important dates": "تمام اہم تاریخوں کی فہرست",
@@ -706,6 +712,7 @@
   "miles": "میل",
   "miles (mi)": "میل (میل)",
   "Misdirected Request": "غلط ہدایت کی درخواست",
+  "Mobile": "موبائل",
   "Modules in this page": "اس صفحہ میں ماڈیولز",
   "Monday": "پیر",
   "Monica. All rights reserved. 2017 — :date.": "Monica۔ جملہ حقوق محفوظ ہیں. 2017 — :date۔",
@@ -751,6 +758,7 @@
   "No labels yet.": "ابھی تک کوئی لیبل نہیں ہے۔",
   "No life event types yet.": "ابھی تک زندگی کے واقعات کی کوئی قسم نہیں ہے۔",
   "Non-Authoritative Information": "غیر مستند معلومات",
+  "None": "کوئی نہیں",
   "No notes found.": "کوئی نوٹس نہیں ملا۔",
   "No results found": "کوئی نتیجہ نہیں",
   "No role": "کوئی کردار نہیں۔",
@@ -798,6 +806,7 @@
   "Other": "دیگر",
   "Out of respect and appreciation": "احترام اور تعریف سے باہر",
   "Page Expired": "صفحہ کی میعاد ختم ہو",
+  "Pager": "پیجر",
   "Pages": "صفحات",
   "Pagination Navigation": "صفحہ بندی نیویگیشن",
   "Parent": "والدین",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "سروس کی شرائط",
   "Test email for Monica": "Monica کے لیے ای میل کی جانچ کریں۔",
   "Test email sent!": "ٹیسٹ ای میل بھیج دیا گیا!",
+  "Text": "متن",
   "Thanks,": "شکریہ،",
   "Thanks for giving Monica a try.": "Monica کو آزمانے کا شکریہ۔",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "سائن اپ کرنے کے لیے شکریہ! شروع کرنے سے پہلے، کیا آپ اس لنک پر کلک کر کے اپنے ای میل ایڈریس کی تصدیق کر سکتے ہیں جو ہم نے ابھی آپ کو ای میل کیا ہے؟ اگر آپ کو ای میل موصول نہیں ہوئی تو ہم خوشی سے آپ کو ایک اور بھیجیں گے۔",
@@ -1274,6 +1284,7 @@
   "Translate It": "اس کا ترجمہ کرو",
   "Transportation": "نقل و حمل",
   "Tuesday": "منگل",
+  "Twitter": "ٹویٹر",
   "Two-factor Confirmation": "دو عنصر کی تصدیق",
   "Two Factor Authentication": "دو عنصر کی تصدیق",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "دو عنصر کی توثیق اب فعال ہے۔ اپنے فون کی تصدیق کنندہ ایپلیکیشن کا استعمال کرتے ہوئے درج ذیل QR کوڈ کو اسکین کریں یا سیٹ اپ کلید درج کریں۔",
