--- a/lang/vi.json
+++ b/lang/vi.json
@@ -386,6 +386,7 @@
   "Delete a new key": "Xóa khóa mới",
   "Delete API Token": "Xóa API Token",
   "Delete contact": "Xóa liên lạc",
+  "Delete contact information": "Xóa thông tin liên hệ",
   "deleted a contact information": "đã xóa thông tin liên hệ",
   "deleted a goal": "đã xóa một mục tiêu",
   "deleted an address": "đã xóa một địa chỉ",
@@ -480,6 +481,7 @@
   "Family": "Gia đình",
   "Family summary": "Tóm tắt gia đình",
   "Favorites": "Yêu thích",
+  "Fax": "Fax",
   "Female": "Nữ giới",
   "File": "Tài liệu",
   "Files": "Các tập tin",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "Các loại nhóm cho phép bạn nhóm mọi người lại với nhau.",
   "Had a promotion": "Đã có khuyến mãi",
   "Hamster": "chuột đồng",
+  "Hangouts": "Hangouts",
   "Have a great day,": "Có một ngày tuyệt vời,",
   "he/him": "anh ấy / anh ấy",
   "Hello!": "Xin chào!",
@@ -548,6 +551,7 @@
   "History of the notification sent": "Lịch sử thông báo đã gửi",
   "Hobbies": "Sở thích",
   "Home": "Trang chủ",
+  "Home House": "Nhà nhà",
   "Horse": "Ngựa",
   "How are you?": "Bạn có khỏe không?",
   "How could I have done this day better?": "Làm sao tôi có thể làm tốt hơn ngày hôm nay?",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "Thông tin từ Wikipedia",
   "in love with": "yêu",
   "Inspirational post": "bài đăng đầy cảm hứng",
+  "Instagram": "Instagram",
   "Insufficient Storage": "Không Đủ Bộ Nhớ",
   "Internal Server Error": "Lỗi Từ Máy Chủ Nội Bộ",
   "Introduction": "Giới thiệu",
@@ -618,6 +623,7 @@
   "Just to say hello": "Chỉ để nói xin chào",
   "Key name": "Tên khóa",
   "kilometers (km)": "km (km)",
+  "Kind": "Loại",
   "km": "km",
   "Label:": "Nhãn:",
   "Labels": "Nhãn",
@@ -706,6 +712,7 @@
   "miles": "dặm",
   "miles (mi)": "dặm (mi)",
   "Misdirected Request": "Yêu Cầu Sai Hướng",
+  "Mobile": "Di động",
   "Modules in this page": "Các mô-đun trong trang này",
   "Monday": "Thứ hai",
   "Monica. All rights reserved. 2017 — :date.": "Monica. Đã đăng ký Bản quyền. 2017 — :date.",
@@ -751,6 +758,7 @@
   "No labels yet.": "Chưa có nhãn.",
   "No life event types yet.": "Chưa có loại sự kiện cuộc sống nào.",
   "Non-Authoritative Information": "Thông Tin Không Có Thẩm Quyền",
+  "None": "Không có",
   "No notes found.": "Không tìm thấy ghi chú nào.",
   "No results found": "không có kết quả nào được tìm thấy",
   "No role": "Không có vai trò",
@@ -798,6 +806,7 @@
   "Other": "Khác",
   "Out of respect and appreciation": "Vì sự tôn trọng và đánh giá cao",
   "Page Expired": "Trang Đã Hết Hạn",
+  "Pager": "Máy nhắn tin",
   "Pages": "Trang",
   "Pagination Navigation": "Điều hướng phân trang",
   "Parent": "Cha mẹ",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "Điều Khoản Dịch Vụ",
   "Test email for Monica": "Email kiểm tra cho Monica",
   "Test email sent!": "Đã gửi email kiểm tra!",
+  "Text": "Chữ",
   "Thanks,": "Cảm ơn,",
   "Thanks for giving Monica a try.": "Cảm ơn vì đã cho Monica thử.",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Cảm ơn bạn đã đăng ký! Trước khi bắt đầu, bạn có thể xác minh địa chỉ email của mình bằng cách nhấp vào liên kết chúng tôi vừa gửi qua email cho bạn không? Nếu bạn không nhận được email, chúng tôi sẽ sẵn lòng gửi cho bạn một email khác.",
@@ -1274,6 +1284,7 @@
   "Translate It": "Dịch nó",
   "Transportation": "Vận tải",
   "Tuesday": "Thứ ba",
+  "Twitter": "Twitter",
   "Two-factor Confirmation": "Xác nhận hai yếu tố",
   "Two Factor Authentication": "Xác minh hai yếu tố",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Xác minh hai yếu tố hiện đã được bật. Quét mã QR sau bằng ứng dụng xác minh trên điện thoại của bạn hoặc nhập khóa cài đặt.",
