--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -386,6 +386,7 @@
   "Delete a new key": "删除新密钥",
   "Delete API Token": "删除 API 令牌",
   "Delete contact": "删除联系人",
+  "Delete contact information": "删除联系信息",
   "deleted a contact information": "删除了联系信息",
   "deleted a goal": "删除了一个目标",
   "deleted an address": "删除了一个地址",
@@ -480,6 +481,7 @@
   "Family": "家庭",
   "Family summary": "家庭概要",
   "Favorites": "收藏夹",
+  "Fax": "传真",
   "Female": "女性",
   "File": "文件",
   "Files": "文件",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "群组类型可让您将人们分组在一起。",
   "Had a promotion": "有促销",
   "Hamster": "仓鼠",
+  "Hangouts": "聚会群体",
   "Have a great day,": "祝你有美好的一天，",
   "he/him": "他/他",
   "Hello!": "您好！",
@@ -548,6 +551,7 @@
   "History of the notification sent": "发送通知的历史记录",
   "Hobbies": "兴趣爱好",
   "Home": "家",
+  "Home House": "房屋",
   "Horse": "马",
   "How are you?": "你好吗？",
   "How could I have done this day better?": "我怎样才能把这一天做得更好呢？",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "来自维基百科的信息",
   "in love with": "与...恋爱",
   "Inspirational post": "励志帖子",
+  "Instagram": "Instagram",
   "Insufficient Storage": "存储空间不足",
   "Internal Server Error": "内部服务器错误",
   "Introduction": "介绍",
@@ -618,6 +623,7 @@
   "Just to say hello": "只是打个招呼",
   "Key name": "按键名称",
   "kilometers (km)": "公里（公里）",
+  "Kind": "种类",
   "km": "公里",
   "Label:": "标签：",
   "Labels": "标签",
@@ -706,6 +712,7 @@
   "miles": "英里",
   "miles (mi)": "英里 (mi)",
   "Misdirected Request": "错误的请求",
+  "Mobile": "移动的",
   "Modules in this page": "此页面中的模块",
   "Monday": "周一",
   "Monica. All rights reserved. 2017 — :date.": "Monica。版权所有。 2017 年 — :date。",
@@ -751,6 +758,7 @@
   "No labels yet.": "还没有标签。",
   "No life event types yet.": "还没有生活事件类型。",
   "Non-Authoritative Information": "非权威信息",
+  "None": "没有任何",
   "No notes found.": "没有找到注释。",
   "No results found": "未找到结果",
   "No role": "没有角色",
@@ -798,6 +806,7 @@
   "Other": "其他",
   "Out of respect and appreciation": "出于尊重和欣赏",
   "Page Expired": "页面会话已超时",
+  "Pager": "寻呼机",
   "Pages": "页数",
   "Pagination Navigation": "分页导航",
   "Parent": "家长",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "服务条款",
   "Test email for Monica": "Monica的测试电子邮件",
   "Test email sent!": "测试邮件已发送！",
+  "Text": "文本",
   "Thanks,": "谢谢，",
   "Thanks for giving Monica a try.": "感谢您给Monica一次尝试。",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "感谢您的注册！在开始之前，您可以通过单击我们刚刚通过电子邮件发送给您的链接来验证您的电子邮件地址吗？如果您没有收到电子邮件，我们很乐意向您发送另一封电子邮件。",
@@ -1274,6 +1284,7 @@
   "Translate It": "翻译它",
   "Transportation": "运输",
   "Tuesday": "周二",
+  "Twitter": "叽叽喳喳",
   "Two-factor Confirmation": "两因素确认",
   "Two Factor Authentication": "双因素认证",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "双因素认证已启用。使用手机的认证应用程序扫描以下二维码，或者输入设置密钥。",
