--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -386,6 +386,7 @@
   "Delete a new key": "刪除新密鑰",
   "Delete API Token": "刪除 API 權杖 (token)",
   "Delete contact": "刪除聯絡人",
+  "Delete contact information": "刪除聯繫信息",
   "deleted a contact information": "刪除了聯絡資訊",
   "deleted a goal": "刪除了一個目標",
   "deleted an address": "刪除了一個地址",
@@ -480,6 +481,7 @@
   "Family": "家庭",
   "Family summary": "家庭概要",
   "Favorites": "收藏夾",
+  "Fax": "傳真",
   "Female": "女性",
   "File": "檔案",
   "Files": "檔案",
@@ -537,6 +539,7 @@
   "Group types let you group people together.": "群組類型可讓您將人們分組在一起。",
   "Had a promotion": "有促銷",
   "Hamster": "倉鼠",
+  "Hangouts": "聚會群體",
   "Have a great day,": "祝你有美好的一天，",
   "he/him": "他/他",
   "Hello!": "您好！",
@@ -548,6 +551,7 @@
   "History of the notification sent": "發送通知的歷史記錄",
   "Hobbies": "興趣嗜好",
   "Home": "首頁",
+  "Home House": "房屋",
   "Horse": "馬",
   "How are you?": "你好嗎？",
   "How could I have done this day better?": "我怎麼才能把這一天做得更好呢？",
@@ -593,6 +597,7 @@
   "Information from Wikipedia": "來自維基百科的訊息",
   "in love with": "與...戀愛",
   "Inspirational post": "勵志貼文",
+  "Instagram": "Instagram",
   "Insufficient Storage": "存儲空間不足",
   "Internal Server Error": "內部服務器錯誤",
   "Introduction": "介紹",
@@ -618,6 +623,7 @@
   "Just to say hello": "只是打個招呼",
   "Key name": "按鍵名稱",
   "kilometers (km)": "公里（公里）",
+  "Kind": "種類",
   "km": "公里",
   "Label:": "標籤：",
   "Labels": "標籤",
@@ -706,6 +712,7 @@
   "miles": "英哩",
   "miles (mi)": "英哩 (mi)",
   "Misdirected Request": "錯誤的請求",
+  "Mobile": "移動的",
   "Modules in this page": "此頁面中的模組",
   "Monday": "週一",
   "Monica. All rights reserved. 2017 — :date.": "Monica。版權所有。 2017 年 — :date。",
@@ -751,6 +758,7 @@
   "No labels yet.": "還沒有標籤。",
   "No life event types yet.": "還沒有生活事件類型。",
   "Non-Authoritative Information": "非權威信息",
+  "None": "沒有任何",
   "No notes found.": "沒有找到註釋。",
   "No results found": "未找到結果",
   "No role": "沒有角色",
@@ -798,6 +806,7 @@
   "Other": "其他",
   "Out of respect and appreciation": "出於尊重與欣賞",
   "Page Expired": "頁面已過期",
+  "Pager": "呼叫器",
   "Pages": "頁數",
   "Pagination Navigation": "分頁導覽",
   "Parent": "家長",
@@ -1047,6 +1056,7 @@
   "Terms of Service": "服務條款",
   "Test email for Monica": "Monica的測驗電子郵件",
   "Test email sent!": "測試郵件已發送！",
+  "Text": "文字",
   "Thanks,": "謝謝，",
   "Thanks for giving Monica a try.": "感謝您給Monica一次嘗試。",
   "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "感謝您的註冊！在開始之前，您可以透過點擊我們剛剛透過電子郵件發送給您的連結來驗證您的電子郵件地址嗎？如果您沒有收到電子郵件，我們很樂意向您發送另一封電子郵件。",
@@ -1274,6 +1284,7 @@
   "Translate It": "翻譯它",
   "Transportation": "運輸",
   "Tuesday": "週二",
+  "Twitter": "嘰嘰喳喳",
   "Two-factor Confirmation": "兩因素確認",
   "Two Factor Authentication": "雙重認證",
   "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "雙重認證已啟用。 使用手機的認證器應用程式掃描以下的 QR code，或輸入設定金鑰。",
